--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-29 [习近平在台湾立法院占据桥头堡了吗?](/articles/voa/1015282.md)
+
 5-29 [中共高级官员访日 会晤日本首相与外长](/articles/voa/1015283.md)
 
 5-29 [泰国前总理他信面临冒犯君主罪的审判](/articles/voa/1015284.md)
@@ -598,6 +600,4 @@
 5-17 [人权组织敦促泰国停止强迫持不同政见者返回其母国](/articles/voa/1015580.md)
 
 5-17 [从举行联合军演到允许盘踞云朗基地，柬埔寨沦为中共军事附庸？](/articles/voa/1015581.md)
-
-5-17 [以色列称将有更多军队进入加沙南部的拉法](/articles/voa/1015582.md)
 
