--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-29 [【网络民议】主因是什么？主因就是您啊主席！](/articles/cdt/340233.md)
+
 5-29 [风慢慢｜反腐越厉，贪的越多](/articles/cdt/340236.md)
 
 5-29 [唐师三百手｜年轻人自杀令人痛心，没人知悉背后缘由更感悲凉](/articles/cdt/340237.md)
@@ -598,6 +600,4 @@
 4-25 [唐师三百首｜华为修衣与庐山恋马赛克](/articles/cdt/341321.md)
 
 4-25 [老爸讲科学｜消失的几万字，不仅是我个人的悲哀，也是更多人的悲哀](/articles/cdt/341323.md)
-
-4-25 [【404文库】衣者褚｜武力阻耕的纪云浩副书记为何能如此凶狠？](/articles/cdt/341324.md)
 
