--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -115,6 +115,8 @@
 
 5-23 [【404文库】何加盐｜中文互联网正在加速崩塌](/articles/cdt/340432.md)
 
+5-30 [【CDTV】“警察暴力执法是吧？还暴不暴？还暴不暴？”](/articles/cdt/340433.md)
+
 5-26 [【CDTV】“目前社会上也有一些人对城管工作是有一些偏见和误解的”](/articles/cdt/340434.md)
 
 5-23 [每日一语 2024.5.22](/articles/cdt/340436.md)
@@ -598,6 +600,4 @@
 4-25 [谷雨实验室｜俄罗斯美女，MADE IN CHINA](/articles/cdt/341311.md)
 
 4-25 [唐师三百首｜华为修衣与庐山恋马赛克](/articles/cdt/341321.md)
-
-4-25 [老爸讲科学｜消失的几万字，不仅是我个人的悲哀，也是更多人的悲哀](/articles/cdt/341323.md)
 
