--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-29 [美国副国务卿坎贝尔提醒欧洲要严肃对待中国援俄问题](/articles/voa/1015276.md)
+
+5-29 [香港泛民主派初选案宣判在即，判决将对香港未来产生重大影响](/articles/voa/1015277.md)
+
 5-29 [菲律宾总统马科斯：中国海警新规加剧紧张局势，“令人担忧”](/articles/voa/1015278.md)
 
 5-29 [台湾新政府就任不久后，美国任命台湾的“坚定”朋友谷立言接任美在台协会台北办事处处长](/articles/voa/1015279.md)
@@ -596,8 +600,4 @@
 5-17 [朝官媒：朝鲜领导人的妹妹金与正否认与俄罗斯进行武器交易](/articles/voa/1015574.md)
 
 5-17 [巴拿马新政府考虑在达连隘口增设检查站并对“走线”移民发布遣返令](/articles/voa/1015575.md)
-
-5-17 [北京强力宣传普京访问，同时严格过滤网民评论](/articles/voa/1015576.md)
-
-5-17 [乌克兰军队等待美国武器之际，俄罗斯看到“机会之窗”](/articles/voa/1015577.md)
 
