--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [人民币值跌跌不休，兑美元汇率创出半年多来新低](/articles/voa/1015275.md)
+
 5-29 [美国副国务卿坎贝尔提醒欧洲要严肃对待中国援俄问题](/articles/voa/1015276.md)
 
 5-29 [香港泛民主派初选案宣判在即，判决将对香港未来产生重大影响](/articles/voa/1015277.md)
@@ -598,6 +600,4 @@
 5-17 [韩中经济部长举行视频会议讨论关键矿产供应链合作](/articles/voa/1015573.md)
 
 5-17 [朝官媒：朝鲜领导人的妹妹金与正否认与俄罗斯进行武器交易](/articles/voa/1015574.md)
-
-5-17 [巴拿马新政府考虑在达连隘口增设检查站并对“走线”移民发布遣返令](/articles/voa/1015575.md)
 
