--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [特立独行的艺术囚徒 异见雕塑家严正学病逝](/articles/voa/1015273.md)
+
 5-30 [卫星爆炸，“粑粑”气球升天：朝鲜向韩国各地投送“脏弹”](/articles/voa/1015274.md)
 
 5-30 [人民币值跌跌不休，兑美元汇率创出半年多来新低](/articles/voa/1015275.md)
@@ -598,6 +600,4 @@
 5-17 [美国资深议员称中国公民非法越境构成严重的国安担忧](/articles/voa/1015571.md)
 
 5-17 [特朗普说习近平和普京正联手搞破坏](/articles/voa/1015572.md)
-
-5-17 [韩中经济部长举行视频会议讨论关键矿产供应链合作](/articles/voa/1015573.md)
 
