--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-30 [以色列官员预计与哈马斯的战争将持续到年底](/articles/voa/1015271.md)
+
+5-30 [美国官员：一项减轻未来大流行病威胁的协议指日可待](/articles/voa/1015272.md)
+
 5-30 [特立独行的艺术囚徒 异见雕塑家严正学病逝](/articles/voa/1015273.md)
 
 5-30 [卫星爆炸，“粑粑”气球升天：朝鲜向韩国各地投送“脏弹”](/articles/voa/1015274.md)
@@ -596,8 +600,4 @@
 5-17 [与中国紧张情势加剧之际 菲律宾将向日本购买更多海岸巡逻舰](/articles/voa/1015569.md)
 
 5-17 [美国对中国公民记者张展失联深表关切 促北京立即停止对记者的监视、审查、骚扰和恐吓](/articles/voa/1015570.md)
-
-5-17 [美国资深议员称中国公民非法越境构成严重的国安担忧](/articles/voa/1015571.md)
-
-5-17 [特朗普说习近平和普京正联手搞破坏](/articles/voa/1015572.md)
 
