--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-30 [木蹊说｜敢不敢和民营资本做兄弟？](/articles/cdt/340225.md)
+
 5-30 [每日一语 2024.5.29](/articles/cdt/340229.md)
 
 5-29 [【网络民议】主因是什么？主因就是您啊主席！](/articles/cdt/340233.md)
@@ -598,6 +600,4 @@
 4-26 [旧闻评论 | 内蒙农地风波：恶霸叙事正在挑战恶吏叙事](/articles/cdt/341306.md)
 
 4-26 [张3丰的世界｜哥大抗议运动到了最后关头](/articles/cdt/341307.md)
-
-4-25 [谷雨实验室｜俄罗斯美女，MADE IN CHINA](/articles/cdt/341311.md)
 
