--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [香港“47人初选案”14人被判“颠覆国家政权罪”成立](/articles/voa/1015262.md)
+
 5-30 [对华加征关税为何也有助于维持美军在未来战争中的优势？](/articles/voa/1015263.md)
 
 5-30 [陪审团要求重新听取特朗普封口费刑事案件的关键证词记录](/articles/voa/1015264.md)
@@ -598,6 +600,4 @@
 5-18 [台湾外长：中俄互相支持对方的“扩张主义”](/articles/voa/1015560.md)
 
 5-18 [乌克兰修改征兵法，部分囚犯也可以参军](/articles/voa/1015561.md)
-
-5-17 [北京推出重大举措提振房市，专家:纾困能否成功尚难预料](/articles/voa/1015562.md)
 
