--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-30 [习近平接待阿拉伯国家领导人来访 称要对加沙冲突发出“中阿共同声音”](/articles/voa/1015260.md)
+
 5-30 [香港法院判决14名泛民主派人士“串谋颠覆国家政权”罪成](/articles/voa/1015261.md)
 
 5-30 [香港“47人初选案”14人被判“颠覆国家政权罪”成立](/articles/voa/1015262.md)
@@ -598,6 +600,4 @@
 5-18 [美国最后一组大熊猫预计将在今秋离开亚特兰大返回中国](/articles/voa/1015558.md)
 
 5-18 [普京结束访华看上去收获甚微，分析：中国也许转向了更低调](/articles/voa/1015559.md)
-
-5-18 [台湾外长：中俄互相支持对方的“扩张主义”](/articles/voa/1015560.md)
 
