--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-30 [香港「47人案」宣判：大部分被告「串謀顛覆國家政權」罪成](/articles/dw/1025402.md)
+
 5-30 [香港「47人案」裁決：一場初選如何被控顛覆政權？](/articles/dw/1025403.md)
 
 5-29 [IMF上调中国经济增长预期 吁调整产业政策](/articles/dw/1025404.md)
@@ -598,6 +600,4 @@
 5-3 [習近平訪法前夕 馬克宏批中國不尊重貿易規則](/articles/dw/1025700.md)
 
 5-2 [绿党前主席：德国政府隐瞒来自中国的黑客袭击](/articles/dw/1025701.md)
-
-5-2 [德语媒体：德国车商的喘息之机](/articles/dw/1025702.md)
 
