--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+5-30 [德媒：欧盟推迟就中国电动车关税宣布决定](/articles/dw/1025399.md)
+
+5-30 [关系再升温！中国解除澳洲多家牛肉商禁令](/articles/dw/1025400.md)
+
 5-30 [“铁杆朋友“柬埔寨：中国在东南亚的战略支点？](/articles/dw/1025401.md)
 
 5-30 [香港「47人案」宣判：大部分被告「串謀顛覆國家政權」罪成](/articles/dw/1025402.md)
@@ -596,8 +600,4 @@
 5-3 [從全球南方到失蹤教授 中日關係漸行漸遠？](/articles/dw/1025697.md)
 
 5-3 [客座评论：中国当局对社会稳定的焦虑](/articles/dw/1025698.md)
-
-5-3 [血染西南印度洋 報告揭中國遠洋漁業剝削實錄](/articles/dw/1025699.md)
-
-5-3 [習近平訪法前夕 馬克宏批中國不尊重貿易規則](/articles/dw/1025700.md)
 
