--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-30 [那些原本是废话的常识｜注重传统的东亚社会为何生育率反而最低？就是因为太传统了](/articles/cdt/340219.md)
+
 5-30 [城市的地得｜不让读外国诗的保安，和他曾品尝到的权力滋味](/articles/cdt/340222.md)
 
 5-30 [木蹊说｜敢不敢和民营资本做兄弟？](/articles/cdt/340225.md)
@@ -598,6 +600,4 @@
 4-26 [每日一语 2024.4.25](/articles/cdt/341298.md)
 
 4-26 [南风窗｜保安队长，和被他性侵的老妇人](/articles/cdt/341301.md)
-
-4-26 [旧闻评论 | 内蒙农地风波：恶霸叙事正在挑战恶吏叙事](/articles/cdt/341306.md)
 
