--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-30 [恢复“熊猫外交” 中国将再派两只大熊猫赴美](/articles/dw/1025398.md)
+
 5-30 [德媒：欧盟推迟就中国电动车关税宣布决定](/articles/dw/1025399.md)
 
 5-30 [关系再升温！中国解除澳洲多家牛肉商禁令](/articles/dw/1025400.md)
@@ -598,6 +600,4 @@
 5-3 [印度经济高速发展的难题](/articles/dw/1025696.md)
 
 5-3 [從全球南方到失蹤教授 中日關係漸行漸遠？](/articles/dw/1025697.md)
-
-5-3 [客座评论：中国当局对社会稳定的焦虑](/articles/dw/1025698.md)
 
