--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-30 [凤羽财经｜全椒的干部，爱说心里话](/articles/cdt/340215.md)
+
+5-30 [刑辩中坚｜张磊：我是如何成为一个废死主义者的](/articles/cdt/340217.md)
+
 5-30 [那些原本是废话的常识｜注重传统的东亚社会为何生育率反而最低？就是因为太传统了](/articles/cdt/340219.md)
 
 5-30 [城市的地得｜不让读外国诗的保安，和他曾品尝到的权力滋味](/articles/cdt/340222.md)
@@ -596,8 +600,4 @@
 4-26 [张3丰的世界｜我从哥大学生抗议行动中学到的](/articles/cdt/341294.md)
 
 4-26 [秦轩｜如我必须死，还我人性](/articles/cdt/341296.md)
-
-4-26 [每日一语 2024.4.25](/articles/cdt/341298.md)
-
-4-26 [南风窗｜保安队长，和被他性侵的老妇人](/articles/cdt/341301.md)
 
