--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-30 [欧盟谴责香港法院判14名香港泛民主派人士“颠覆”罪成](/articles/dw/1025397.md)
+
 5-30 [恢复“熊猫外交” 中国将再派两只大熊猫赴美](/articles/dw/1025398.md)
 
 5-30 [德媒：欧盟推迟就中国电动车关税宣布决定](/articles/dw/1025399.md)
@@ -598,6 +600,4 @@
 5-3 [压力太大 中国媒体对亚洲新闻奖“望而却步”](/articles/dw/1025695.md)
 
 5-3 [印度经济高速发展的难题](/articles/dw/1025696.md)
-
-5-3 [從全球南方到失蹤教授 中日關係漸行漸遠？](/articles/dw/1025697.md)
 
