--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+5-30 [多国政府和人权团体谴责香港依国安法定罪14名民主派人士](/articles/voa/1015254.md)
+
+5-30 [一连四波对美制裁，中共两岸博弈扩大到美国身上？](/articles/voa/1015255.md)
+
 5-30 [北约外长会议将聚焦军援乌克兰](/articles/voa/1015256.md)
 
 5-30 [美日韩谴责朝鲜发射弹道导弹 联合国安理会将讨论朝鲜射星](/articles/voa/1015257.md)
@@ -596,8 +600,4 @@
 5-18 [台湾将召开民防领袖论坛 乌克兰专家: 备战止战](/articles/voa/1015552.md)
 
 5-18 [华北雁塘：中俄同盟后：三战还是新冷战？](/articles/voa/1015553.md)
-
-5-18 [“让台湾人民知道美国支持他们” 美众院外交领袖计划总统就职后率团访台](/articles/voa/1015554.md)
-
-5-18 [两名中国公民在美国被捕，被控利用加密货币“杀猪盘”洗钱至少7300万美元](/articles/voa/1015555.md)
 
