--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [坎贝尔马朝旭在华府会谈，努力防止美中误判导致冲突](/articles/voa/1015250.md)
+
 5-30 [香格里拉对话开幕在即，美中关系、俄乌以哈战争及南中国海争端成热门议题](/articles/voa/1015251.md)
 
 5-30 [美国新加坡执法部门联手侦破僵尸网络欺诈案，主犯王云鹤被捕](/articles/voa/1015252.md)
@@ -598,6 +600,4 @@
 5-18 [分析人士：即将就任的台湾总统赖清德面临艰难的平衡](/articles/voa/1015548.md)
 
 5-18 [支持率下滑的拜登努力与黑人选民接触](/articles/voa/1015549.md)
-
-5-18 [报告：中国对“血腥木材”的喜好可能助长了莫桑比克的冲突](/articles/voa/1015550.md)
 
