--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+5-31 [【CDT月度视频】五月之声（2024）——向《四月之声》致敬](/articles/cdt/340207.md)
+
 5-30 [【网络民议】“今年夏天，你想收到什么礼物？”](/articles/cdt/340212.md)
 
 5-30 [凤羽财经｜全椒的干部，爱说心里话](/articles/cdt/340215.md)
@@ -598,6 +600,4 @@
 4-26 [【CDT报告汇】公民实验室：几乎所有中文输入法都会泄露输入的内容（外二篇）](/articles/cdt/341290.md)
 
 4-26 [律侠客｜远洋捕捞去搞点大钱如何？这年头都穷疯了](/articles/cdt/341292.md)
-
-4-26 [张3丰的世界｜我从哥大学生抗议行动中学到的](/articles/cdt/341294.md)
 
