--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [封口费刑事案审判做出裁决，陪审团判定特朗普有罪](/articles/voa/1015242.md)
+
 5-31 [美国应如何通过高科技出口管制来阻遏北京武力攻台？](/articles/voa/1015243.md)
 
 5-31 [分析人士看到朝鲜与中国关系出现紧张迹象](/articles/voa/1015244.md)
@@ -598,6 +600,4 @@
 5-18 [“我不是你妈”：璩静说出中国职场大实话？](/articles/voa/1015540.md)
 
 5-18 [普京结束中国行 凸显俄中战略关系](/articles/voa/1015541.md)
-
-5-18 [蔡英文八年评价: 留下“世界的台湾”，两岸关系恶化](/articles/voa/1015542.md)
 
