--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,14 @@
 美国之音
 ------
 
+5-31 [特朗普在封口费刑事案中被判有罪，34项指控均告成立](/articles/voa/1015237.md)
+
+5-31 [原声带： 裴新：8964｜我被中国政府驱逐出境](/articles/voa/1015238.md)
+
+5-31 [华盛顿允许乌克兰使用美国提供的武器在哈尔科夫附近打击俄罗斯境内](/articles/voa/1015239.md)
+
+5-31 [封口费案做出有罪裁决，特朗普与共和党领袖谴责审判是美国耻辱，民主党人欢呼法治胜利](/articles/voa/1015240.md)
+
 5-31 [第三名美国乳品工人感染禽流感，密歇根州将扩大检测范围](/articles/voa/1015241.md)
 
 5-31 [封口费刑事案审判做出裁决，陪审团判定特朗普有罪](/articles/voa/1015242.md)
@@ -592,12 +600,4 @@
 5-18 [以军在加沙发现三名去年10月7日遭哈马斯绑架的人质遗体](/articles/voa/1015535.md)
 
 5-18 [欧盟禁止四家俄媒在欧盟活动，俄国会领袖称其“双标”](/articles/voa/1015536.md)
-
-5-18 [台湾国安高层人士称，赖清德就职演说将强调维持现状](/articles/voa/1015537.md)
-
-5-18 [专访曾锐生：习近平思想是中国梦最大的敌人](/articles/voa/1015538.md)
-
-5-18 [菲律宾总统小马科斯誓言强力捍卫领土](/articles/voa/1015539.md)
-
-5-18 [“我不是你妈”：璩静说出中国职场大实话？](/articles/voa/1015540.md)
 
