--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+5-31 [2024香格里拉对话重头戏：美中防长首次面对面，他们到底要谈什么？](/articles/voa/1015234.md)
+
+5-31 [越南抗议中国在南中国海部署医院船](/articles/voa/1015235.md)
+
+5-31 [伦敦纪念六四“被删除的记忆”展览：幸存者们作证，珍贵文物展出](/articles/voa/1015236.md)
+
 5-31 [特朗普在封口费刑事案中被判有罪，34项指控均告成立](/articles/voa/1015237.md)
 
 5-31 [原声带： 裴新：8964｜我被中国政府驱逐出境](/articles/voa/1015238.md)
@@ -594,10 +600,4 @@
 5-19 [乌克兰军队在东北边境地区极力制止俄罗斯的推进](/articles/voa/1015532.md)
 
 5-19 [黄循财接任新加坡总理：“李氏王朝”落幕，“新加坡模式”失去光芒？](/articles/voa/1015533.md)
-
-5-19 [中国又一名部长出事，不久前还作为“习近平特使”出访他国](/articles/voa/1015534.md)
-
-5-18 [以军在加沙发现三名去年10月7日遭哈马斯绑架的人质遗体](/articles/voa/1015535.md)
-
-5-18 [欧盟禁止四家俄媒在欧盟活动，俄国会领袖称其“双标”](/articles/voa/1015536.md)
 
