--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [特朗普被定罪上中国社媒热搜榜，网民期待美国因此爆发内乱](/articles/voa/1015233.md)
+
 5-31 [2024香格里拉对话重头戏：美中防长首次面对面，他们到底要谈什么？](/articles/voa/1015234.md)
 
 5-31 [越南抗议中国在南中国海部署医院船](/articles/voa/1015235.md)
@@ -598,6 +600,4 @@
 5-19 [红木贩运—中国人的需求导致非法贸易屡禁不止](/articles/voa/1015531.md)
 
 5-19 [乌克兰军队在东北边境地区极力制止俄罗斯的推进](/articles/voa/1015532.md)
-
-5-19 [黄循财接任新加坡总理：“李氏王朝”落幕，“新加坡模式”失去光芒？](/articles/voa/1015533.md)
 
