--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [美国授权乌克兰使用美国武器打击俄罗斯 俄乌继续攻击对方目标](/articles/voa/1015232.md)
+
 5-31 [特朗普被定罪上中国社媒热搜榜，网民期待美国因此爆发内乱](/articles/voa/1015233.md)
 
 5-31 [2024香格里拉对话重头戏：美中防长首次面对面，他们到底要谈什么？](/articles/voa/1015234.md)
@@ -598,6 +600,4 @@
 5-19 [中央司令部：也门胡塞武装发射导弹击中一艘驶向中国的红海油轮](/articles/voa/1015530.md)
 
 5-19 [红木贩运—中国人的需求导致非法贸易屡禁不止](/articles/voa/1015531.md)
-
-5-19 [乌克兰军队在东北边境地区极力制止俄罗斯的推进](/articles/voa/1015532.md)
 
