--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-31 [马克龙：以欧洲人的姿态行动起来](/articles/dw/1025394.md)
+
 5-31 [中國中止台灣134項產品ECFA關稅減讓](/articles/dw/1025395.md)
 
 5-31 [董軍、台海、南海：香格里拉對話的三大看點](/articles/dw/1025396.md)
@@ -598,6 +600,4 @@
 5-3 [记者无疆界组织：全球新闻自由度仍在恶化](/articles/dw/1025692.md)
 
 5-3 [台湾称多架中国军机飞越台海中线](/articles/dw/1025693.md)
-
-5-3 [纳瓦尔娜亚获2024年德国之声言论自由奖](/articles/dw/1025694.md)
 
