--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+5-31 [严家祺：从天安门事件看中国历史的走向](/articles/voa/1015226.md)
+
 5-31 [美中持续紧张之际，两国防长于新加坡会晤](/articles/voa/1015227.md)
 
 5-31 [美国最新报告显示俄罗斯在乌克兰战争中使用了朝鲜制造的导弹](/articles/voa/1015228.md)
@@ -598,6 +600,4 @@
 5-19 [520就职前夕 赖清德与友邦元首钓虾同乐 台湾海巡署加强离岛海域“全时段巡弋”](/articles/voa/1015524.md)
 
 5-19 [越共提名公安部长苏林接任国家主席](/articles/voa/1015525.md)
-
-5-19 [格鲁吉亚通过“外国影响力”法案 抗议无果下总统行使“象征性”否决权](/articles/voa/1015526.md)
 
