--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+5-31 [客座评论：美日韩同盟是否会被中国撕开一个口子](/articles/dw/1025392.md)
+
 5-31 [在封口费刑事案中被判有罪 特朗普还能当总统吗？](/articles/dw/1025393.md)
 
 5-31 [马克龙：以欧洲人的姿态行动起来](/articles/dw/1025394.md)
@@ -598,6 +600,4 @@
 5-4 [专访：马克龙再会习近平 俄乌议题难有进展](/articles/dw/1025690.md)
 
 5-3 [中国嘻哈音乐：成为主流的代价](/articles/dw/1025691.md)
-
-5-3 [记者无疆界组织：全球新闻自由度仍在恶化](/articles/dw/1025692.md)
 
