--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-1 [拜登呼吁哈马斯接受以色列的新停火计划](/articles/voa/1015216.md)
+
+6-1 [中国电商Temu被欧盟列为超大型在线平台，将依《数字服务法》受最严审视。](/articles/voa/1015217.md)
+
 6-1 [草根网红窜起 网络主播成为新职业 分析:中国“直播兴国”不易](/articles/voa/1015218.md)
 
 6-1 [美国宣布对参与国安法实施的中港官员实施新的签证限制](/articles/voa/1015219.md)
@@ -596,8 +600,4 @@
 5-20 [对伊朗总统坠机的国际反应](/articles/voa/1015514.md)
 
 5-20 [赖清德就职台湾总统将如何影响欧洲对台关系？](/articles/voa/1015515.md)
-
-5-20 [伊朗连夜搜寻载有总统和其他官员的坠毁直升机](/articles/voa/1015516.md)
-
-5-20 [突发：搭载伊朗总统莱希的直升机发生故障“硬着陆”，救援人员正赶往现场](/articles/voa/1015517.md)
 
