--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-1 [特朗普誓言对封口费案有罪判决提出上诉](/articles/voa/1015214.md)
+
 6-1 [专访美国前副国务卿阿米蒂奇： 中国越欺负台湾，国际社会就越支持台湾](/articles/voa/1015215.md)
 
 6-1 [拜登呼吁哈马斯接受以色列的新停火计划](/articles/voa/1015216.md)
@@ -598,6 +600,4 @@
 5-20 [以色列轰炸加沙，白宫代表抵达以色列推动停火谈判](/articles/voa/1015512.md)
 
 5-20 [巴基斯坦部长：巴基斯坦想要北京同阿富汗讨论恐怖主义](/articles/voa/1015513.md)
-
-5-20 [对伊朗总统坠机的国际反应](/articles/voa/1015514.md)
 
