--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-1 [海涛评论｜全椒翻车事件：看似信口开河，或是能力退化](/articles/cdt/340177.md)
+
+6-1 [魏春亮说｜吐槽嘉峪关的选调生，到底犯了多大的罪？](/articles/cdt/340181.md)
+
 6-1 [不器是一种态度｜上海某保安同志禁止“宣传”外国诗歌](/articles/cdt/340184.md)
 
 6-1 [老萧杂说｜请拿出正视跳桥跳楼问题的勇气](/articles/cdt/340187.md)
@@ -596,8 +600,4 @@
 4-27 [凤凰WEEKLY｜卖“抗癌化妆品”日赚500万，这网红终于凉了](/articles/cdt/341244.md)
 
 4-27 [建设性意见｜讲道理，开鲁县“先交钱再种地”的新闻反转不了的](/articles/cdt/341246.md)
-
-4-27 [WOMEN我们｜贝震颖：“编程随想”只是一个普通人，神话和污名化都是环境的扭曲](/articles/cdt/341265.md)
-
-4-27 [每日一语 2024.4.26](/articles/cdt/341270.md)
 
