--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-1 [每日一语 2024.5.31](/articles/cdt/340171.md)
+
 6-1 [海涛评论｜全椒翻车事件：看似信口开河，或是能力退化](/articles/cdt/340177.md)
 
 6-1 [魏春亮说｜吐槽嘉峪关的选调生，到底犯了多大的罪？](/articles/cdt/340181.md)
@@ -598,6 +600,4 @@
 4-28 [歪脑｜谁是羔羊？ 90后维吾尔人谈以前从没想过的未来](/articles/cdt/341225.md)
 
 4-28 [枕边往事｜致曾哥：人生如行舟孤寂](/articles/cdt/341227.md)
-
-4-27 [凤凰WEEKLY｜卖“抗癌化妆品”日赚500万，这网红终于凉了](/articles/cdt/341244.md)
 
