--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-1 [英伟达CEO黄仁勋称台湾为“重要国家” 引发部分中国网民挞伐](/articles/voa/1015205.md)
+
 6-1 [美中关系“晴雨表”？香格里拉对话会如何渐成两国“论剑擂台”](/articles/voa/1015206.md)
 
 6-1 [美日韩再次强调经济与地区安全三边合作，反对南中国海非法海事主张，重申维护台海和平](/articles/voa/1015207.md)
@@ -598,6 +600,4 @@
 5-20 [赖清德吁两岸重启对话 分析:北京或认赖清德的善意不足](/articles/voa/1015503.md)
 
 5-20 [美智库警告:赖清德执政期间，中国拟以“非战争胁迫”进逼台湾](/articles/voa/1015504.md)
-
-5-20 [聿文视界：中俄结成反美“同盟”](/articles/voa/1015505.md)
 
