--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-1 [“民主派47人”案后 香港民主运动何去何从？](/articles/dw/1025386.md)
+
 5-31 [美国宣布就47人案向中港官员实施新制裁](/articles/dw/1025387.md)
 
 5-31 [西班牙查获11吨假冒欧洲足球队球衣](/articles/dw/1025388.md)
@@ -598,6 +600,4 @@
 5-4 [若特朗普胜选将会再次支持台湾？](/articles/dw/1025684.md)
 
 5-4 [“排外”导致经济困境？拜登言论惹恼日本印度](/articles/dw/1025685.md)
-
-5-4 [电竞男生去世受关注 网民：热度盖过梅大高速塌方](/articles/dw/1025686.md)
 
