--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-1 [哈马斯称“积极考虑”以色列提出的停火提议](/articles/dw/1025384.md)
+
+6-1 [欧洲三国承认巴勒斯坦国 拉姆安拉升旗感谢](/articles/dw/1025385.md)
+
 6-1 [“民主派47人”案后 香港民主运动何去何从？](/articles/dw/1025386.md)
 
 5-31 [美国宣布就47人案向中港官员实施新制裁](/articles/dw/1025387.md)
@@ -596,8 +600,4 @@
 5-4 [美空军部长乘AI战机参与模拟空战](/articles/dw/1025682.md)
 
 5-4 [客座評論：兩岸春不暖花不開與「抗中三長」](/articles/dw/1025683.md)
-
-5-4 [若特朗普胜选将会再次支持台湾？](/articles/dw/1025684.md)
-
-5-4 [“排外”导致经济困境？拜登言论惹恼日本印度](/articles/dw/1025685.md)
 
