--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-1 [被欧盟列为超大平台  Temu须遵守更严格规定](/articles/dw/1025382.md)
+
 6-1 [哈马斯称“积极考虑”拜登宣佈的停火提议](/articles/dw/1025383.md)
 
 6-1 [哈马斯称“积极考虑”以色列提出的停火提议](/articles/dw/1025384.md)
@@ -598,6 +600,4 @@
 5-5 [调查：德国人对电动车兴趣下降](/articles/dw/1025680.md)
 
 5-5 [ACEA：欧盟电动车充电桩严重不足](/articles/dw/1025681.md)
-
-5-4 [美空军部长乘AI战机参与模拟空战](/articles/dw/1025682.md)
 
