--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-1 [六四35周年前夕 天安门母亲呼吁与习近平对话重申三大诉求](/articles/voa/1015199.md)
+
 6-1 [韩国称更多证据显示朝俄存在军事合作](/articles/voa/1015200.md)
 
 6-1 [民调：特朗普被判有罪后 一成共和党选民不太可能投票给特朗普](/articles/voa/1015201.md)
@@ -598,6 +600,4 @@
 5-21 [投资者对中国当局支撑房市措施信心不足，开发商股票大幅下跌](/articles/voa/1015497.md)
 
 5-21 [美专家解析赖清德时代的两岸关系、美台关系及台湾防卫](/articles/voa/1015498.md)
-
-5-20 [赖清德总统宣誓就职之日，北京宣布制裁参与对台军售的三家美国公司](/articles/voa/1015499.md)
 
