--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-1 [美防长：与中国的战争既非迫在眉睫亦非不可避免](/articles/dw/1025380.md)
+
 6-1 [欧洲议会大选：怎么选? 选什么?](/articles/dw/1025381.md)
 
 6-1 [被欧盟列为超大平台  Temu须遵守更严格规定](/articles/dw/1025382.md)
@@ -598,6 +600,4 @@
 5-5 [德国选项党华裔助手陷“间谍门”在德华人怎么看](/articles/dw/1025678.md)
 
 5-5 [美国大学校园抗议活动席卷各地](/articles/dw/1025679.md)
-
-5-5 [调查：德国人对电动车兴趣下降](/articles/dw/1025680.md)
 
