--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-1 [“六四”35周年前夕 港媒头版“开天窗”](/articles/dw/1025377.md)
+
+6-1 [加防长：警告中国勿干涉选举 关切台湾周边军事行动](/articles/dw/1025378.md)
+
+6-1 [德国南部面临百年一遇的洪水威胁](/articles/dw/1025379.md)
+
 6-1 [美防长：与中国的战争既非迫在眉睫亦非不可避免](/articles/dw/1025380.md)
 
 6-1 [欧洲议会大选：怎么选? 选什么?](/articles/dw/1025381.md)
@@ -594,10 +600,4 @@
 5-5 [重振香港旅游业 如何吸引内地游客成挑战](/articles/dw/1025675.md)
 
 5-5 [德国为下一次大流行病做好准备了吗？](/articles/dw/1025676.md)
-
-5-5 [2023年近7万非欧盟专业人才来德就业](/articles/dw/1025677.md)
-
-5-5 [德国选项党华裔助手陷“间谍门”在德华人怎么看](/articles/dw/1025678.md)
-
-5-5 [美国大学校园抗议活动席卷各地](/articles/dw/1025679.md)
 
