--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-1 [时代论坛 | 站在历史记忆的肩膀上祷告](/articles/cdt/340150.md)
+
 6-1 [凤羽财经｜儿童节朝气蓬勃老年人和垂头丧气年轻人](/articles/cdt/340156.md)
 
 6-1 [西坡原创｜网友不许励志，官方不许躺平](/articles/cdt/340159.md)
@@ -351,6 +353,8 @@
 
 5-13 [GQ报道｜50岁与80岁，一对母女的抱团养老](/articles/cdt/340772.md)
 
+6-1 [【中国哭墙】4年多了… 既是倾诉，更是怀念（5月1日-5月31日，2024年）](/articles/cdt/340773.md)
+
 5-13 [新新默存｜十六周年祭，那只白蝴蝶一直在](/articles/cdt/340775.md)
 
 5-13 [每日一语 2024.5.12](/articles/cdt/340780.md)
@@ -596,8 +600,4 @@
 4-30 [【CDT月度视频】四月之声（2024）——向《四月之声》致敬](/articles/cdt/341215.md)
 
 4-28 [_dailu_｜回国见闻：“脱钩”下的两面，中国失去市场，美国物价飞涨](/articles/cdt/341217.md)
-
-4-28 [每日一语 2024.4.27](/articles/cdt/341219.md)
-
-4-28 [果壳｜滴滴和美团里的女性：派单无性别，她们却赚得更少](/articles/cdt/341222.md)
 
