--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-1 [北京全面倒向巴勒斯坦 中以关系或雪上加霜](/articles/voa/1015195.md)
+
+6-1 [拜登停火方案获多方支持，以色列坚持战争目标，拉法攻击还在继续](/articles/voa/1015196.md)
+
 6-1 [专访何晓清：从六四、香港到白纸 以记忆作为反抗](/articles/voa/1015197.md)
 
 6-1 [俄军大规模袭击乌克兰能源和基础设施，基辅呼吁盟友提供更多防空系统](/articles/voa/1015198.md)
@@ -596,8 +600,4 @@
 5-21 [贝莱德公司吹哨人称公司掩盖发现中国投资的搜索引擎](/articles/voa/1015493.md)
 
 5-21 [伊朗总统莱希之死将如何影响中国和伊朗关系？](/articles/voa/1015494.md)
-
-5-21 [法媒体：中国官员公开参与在法国威吓绑架中国异议人士的行动](/articles/voa/1015495.md)
-
-5-21 [国际刑事法院检察官申请对以色列总理、防长以及哈马斯三领导人发布逮捕令，美国表示愤慨](/articles/voa/1015496.md)
 
