--- a/articles/cdt/340150.md
+++ b/articles/cdt/340150.md
@@ -1,5 +1,5 @@
 <!--1717255355000-->
-[时代论坛 | 站在历史记忆的肩膀上祷告](https://chinadigitaltimes.net/chinese/708425.html)
+[时代论坛｜站在历史记忆的肩膀上祷告](https://chinadigitaltimes.net/chinese/708425.html)
 ------
 
 <blockquote><p>CDT编者按：在“六四“35周年纪念日前夕，香港天主教周报《时代论坛》（Christian Times）以大量留白（亦称“开天窗”）作为最新一期的头版。同时，该报发表社论《站在历史记忆的肩膀上祷告》，指出“近年香港社会的变化翻天覆地，形格势禁”，称“惟有将段段文字化作空格子与一片白，以应对当前局势”。此前，每逢六四周年纪念日，《时代论坛》都会刊登纪念祷文,但是今年却表示“今期头版专题因事未能刊出，还望读者见谅！”</p></blockquote><p>时代论坛 / 2024年5月31日</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/06/jack-anstey-HtUBBdNDxpQ-unsplash-1.jpg" alt="image"></p><div style="width:42%;float:right;padding-left:20px;"><div class="su-spoiler su-spoiler-style-fancy su-spoiler-icon-chevron-circle su-spoiler-closed" data-scroll-offset="0" data-anchor-in-url="no"><div class="su-spoiler-title" tabindex="0" role="button"><span class="su-spoiler-icon"></span>CDT 档案卡</div><div class="su-spoiler-content su-u-clearfix su-u-trim"><strong>标题：</strong>站在历史记忆的肩膀上祷告<br><strong>作者：</strong><a href="https://chinadigitaltimes.net/space/时代论坛" target="_blank">时代论坛</a><br><strong>发表日期：</strong>2024.5.31<br><strong>来源：</strong><a href="https://web.archive.org/web/https://mp.weixin.qq.com/s/hhANZUUFGievt54Q6XsxjQ" target="_blank">香港周刊“时代论坛”</a><br><strong>主题归类：</strong><a href="https://chinadigitaltimes.net/space/六四" target="_blank">六四</a><br><strong>CDS收藏：</strong><a href="https://chinadigitaltimes.net/space/%E5%85%AD%E5%9B%9B%E9%A6%86" target="_blank" rel="noopener">六四馆</a><br><strong>版权说明：</strong>该作品版权归原作者所有。中国数字时代仅对原作进行存档，以对抗中国的网络审查。<a href="https://chinadigitaltimes.net/chinese/copyright">详细版权说明</a>。</div></div></div><p>那年的春夏之交，成为一代港人的集体记忆、政治伦理的启蒙与定规。长年存在于集体记忆之中。诚实面对历史，不是为了延续冤仇，更不是为了抹黑煽动，而是为了让未来的悔改与复和有根有基；也为了让社会能够正视事实，得以从错误中学习，避免覆辙重蹈。一如圣经作者记载历史人物，无论这些人物跟上主的关系有多亲近，对于其生命轨迹里的种种缺憾，仍是会秉笔直书；以色列人作为上主的选民，圣经作者对于他们的过犯更是毫不客气。能够诚实面对过去，才能靠着那掌管历史之主的恩典，面对未来。</p><p>那段横跨九七与千禧年的岁月，并不短暂，对事态的关注度，固然有起有跌，相关集会也一度被嘲讽为「唱K」和「行礼如仪」；惟近年香港社会的变化，翻天覆地，形格势禁。即使是源于历史记忆的祷文，也可能惹来「关注」；某些人的经历与回忆，便显得格外敏感。作为传媒，要毋负历史、毋负读者，惟有将段段文字化作空格子与一片白，以应对当前局势。</p><p>为逝者摆上悼念，为生者付出关怀，是人之常情，也是良善与仁爱的表现。从信仰角度来看，那份从心底发出的悼念与关怀，以及为社会未来更为公义和平的盼望祷声，上主总会垂听──无论声音多寡，无论人在何方。</p><p>基督信仰并没有为特定政体背书。然而，不同政体对人性的假设，跟信仰视野所看到的，是远是近？在不同政体下，社会实践公义与怜悯的限制，是大是小？当众人活在其中，大家的人性阴暗面是会被制衡抵消，还是会变本加厉什至祸及邻舍？凡此种种，信仰总有话要说。不变的，是我们要为在上的祷告，求赐智慧与谦卑，期望制度能够尊重真相，赏善罚恶；更要为万民祷告，期望社稷体现和平公义，众人守望相助。</p><p>放眼历史长河，几十年只是短暂一瞬，个人能够左右的也实在有限。然而，置身于大尺度的历史视野，即使一时尚未看清楚掌管历史之主的心意，却总可以看得清楚社群互动里的人性善恶，以及在缺憾世界里与神同行的生命轨迹──是别人的，也是自己的。焉知昔日的历史岁月、今天的尽忠服事，会如何为上主所用，撰写那未来的终章？让我们守护历史记忆，站在她的肩膀上，向上主祷告呼求。</p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/708425.html" data-a2a-title="时代论坛 | 站在历史记忆的肩膀上祷告"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708425.html&amp;linkname=%E6%97%B6%E4%BB%A3%E8%AE%BA%E5%9D%9B%20%7C%20%E7%AB%99%E5%9C%A8%E5%8E%86%E5%8F%B2%E8%AE%B0%E5%BF%86%E7%9A%84%E8%82%A9%E8%86%80%E4%B8%8A%E7%A5%B7%E5%91%8A" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
