--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,9 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
-6-1 [时代论坛 | 站在历史记忆的肩膀上祷告](/articles/cdt/340150.md)
+6-2 [青少年生命复元｜儿童节成“儿童劫”：当代孩子的快乐，早就被献祭了](/articles/cdt/340146.md)
+
+6-1 [时代论坛｜站在历史记忆的肩膀上祷告](/articles/cdt/340150.md)
 
 6-1 [凤羽财经｜儿童节朝气蓬勃老年人和垂头丧气年轻人](/articles/cdt/340156.md)
 
@@ -598,6 +600,4 @@
 4-29 [【404文库】“以‘攻击’为目标来提问，这也是本次同济大学这位提问的同学犯的错误”（外二篇）](/articles/cdt/341214.md)
 
 4-30 [【CDT月度视频】四月之声（2024）——向《四月之声》致敬](/articles/cdt/341215.md)
-
-4-28 [_dailu_｜回国见闻：“脱钩”下的两面，中国失去市场，美国物价飞涨](/articles/cdt/341217.md)
 
