--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-2 [嫦娥探月见证欧中合作 政治隐忧犹存](/articles/dw/1025376.md)
+
 6-1 [“六四”35周年前夕 港媒头版“开天窗”](/articles/dw/1025377.md)
 
 6-1 [加防长：警告中国勿干涉选举 关切台湾周边军事行动](/articles/dw/1025378.md)
@@ -598,6 +600,4 @@
 5-5 [强调「和平通行权」 德外长不排除军舰穿越台海](/articles/dw/1025674.md)
 
 5-5 [重振香港旅游业 如何吸引内地游客成挑战](/articles/dw/1025675.md)
-
-5-5 [德国为下一次大流行病做好准备了吗？](/articles/dw/1025676.md)
 
