--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-2 [真实故事计划Pro｜当一位母亲知道孩子是跨性别后](/articles/cdt/340139.md)
+
 6-2 [青少年生命复元｜儿童节成“儿童劫”：当代孩子的快乐，早就被献祭了](/articles/cdt/340146.md)
 
 6-1 [时代论坛｜站在历史记忆的肩膀上祷告](/articles/cdt/340150.md)
@@ -598,6 +600,4 @@
 4-29 [反转阅读｜大陆没能引进或再版的近现代史著作](/articles/cdt/341209.md)
 
 4-29 [张3丰的世界｜参加抗议的年轻人不是问题](/articles/cdt/341210.md)
-
-4-29 [【404文库】“以‘攻击’为目标来提问，这也是本次同济大学这位提问的同学犯的错误”（外二篇）](/articles/cdt/341214.md)
 
