--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-2 [每日一语 2024.6.1](/articles/cdt/340129.md)
+
+6-2 [【历史上的今天】澎湃全媒体实验室｜上海：61天，61人](/articles/cdt/340136.md)
+
 6-2 [真实故事计划Pro｜当一位母亲知道孩子是跨性别后](/articles/cdt/340139.md)
 
 6-2 [青少年生命复元｜儿童节成“儿童劫”：当代孩子的快乐，早就被献祭了](/articles/cdt/340146.md)
@@ -596,8 +600,4 @@
 4-29 [每日一语 2024.4.28](/articles/cdt/341207.md)
 
 4-29 [冷杉RECORD｜留守村庄的老人，把宇宙写在墙上](/articles/cdt/341208.md)
-
-4-29 [反转阅读｜大陆没能引进或再版的近现代史著作](/articles/cdt/341209.md)
-
-4-29 [张3丰的世界｜参加抗议的年轻人不是问题](/articles/cdt/341210.md)
 
