--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -17,6 +17,8 @@
 
 6-1 [西坡原创｜网友不许励志，官方不许躺平](/articles/cdt/340159.md)
 
+6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（一）](/articles/cdt/340166.md)
+
 6-2 [【CDT周报】第172期：“主因是什么”创作出超越苏联笑话的作品](/articles/cdt/340168.md)
 
 6-1 [每日一语 2024.5.31](/articles/cdt/340171.md)
@@ -598,6 +600,4 @@
 4-29 [建设性意见｜根本不存在“新冠灭活疫苗之父”](/articles/cdt/341198.md)
 
 4-29 [每日一语 2024.4.28](/articles/cdt/341207.md)
-
-4-29 [冷杉RECORD｜留守村庄的老人，把宇宙写在墙上](/articles/cdt/341208.md)
 
