--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-2 [中国防长猛烈抨击“台独分子” 称解放军将强力阻止台湾独立](/articles/voa/1015184.md)
+
 6-2 [肯尼亚国家培训机构设立中国图书角](/articles/voa/1015185.md)
 
 6-2 [中国探测器成功降落在月球背面](/articles/voa/1015186.md)
@@ -598,6 +600,4 @@
 5-21 [中国官媒将伊朗总统坠机归咎于美国制裁 海外中文网则称莱希为“德黑兰屠夫”](/articles/voa/1015482.md)
 
 5-21 [美环保署警告全美水务系统加强网络安全,并点明中俄伊朗对美国基础设施的威胁](/articles/voa/1015483.md)
-
-5-21 [亚洲邻国对中国部署浮动核电站的计划持警惕态度](/articles/voa/1015484.md)
 
