--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-2 [印度大选落幕 莫迪有望连任](/articles/voa/1015182.md)
+
+6-2 [朝鲜再向韩国各地投放更多“垃圾气球” 韩美同批有违《停战协定》](/articles/voa/1015183.md)
+
 6-2 [中国防长猛烈抨击“台独分子” 称解放军将强力阻止台湾独立](/articles/voa/1015184.md)
 
 6-2 [肯尼亚国家培训机构设立中国图书角](/articles/voa/1015185.md)
@@ -596,8 +600,4 @@
 5-21 [法属新喀里多尼亚暴乱未歇 澳大利亚、新西兰派专机撤侨](/articles/voa/1015480.md)
 
 5-21 [肯塔基州初选看点](/articles/voa/1015481.md)
-
-5-21 [中国官媒将伊朗总统坠机归咎于美国制裁 海外中文网则称莱希为“德黑兰屠夫”](/articles/voa/1015482.md)
-
-5-21 [美环保署警告全美水务系统加强网络安全,并点明中俄伊朗对美国基础设施的威胁](/articles/voa/1015483.md)
 
