--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,8 @@
 德国之声
 ------
 
+6-2 [朝鲜再对韩空飘600个“垃圾粪便气球”](/articles/dw/1025371.md)
+
 6-2 [在战火中学习 - 哈尔科夫地下六米深处的课堂](/articles/dw/1025372.md)
 
 6-2 [对抗孤独！德政府发布“孤独晴雨表”](/articles/dw/1025373.md)
@@ -598,6 +600,4 @@
 5-5 [人工智能在德企还需迎头赶上](/articles/dw/1025669.md)
 
 5-5 [以色列关闭境内半岛电视台分部](/articles/dw/1025670.md)
-
-5-5 [马克龙欲就贸易和乌克兰问题向习近平施压](/articles/dw/1025671.md)
 
