--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-2 [澳日军方在“香格里拉对话”期间与中国举行会谈 强调对话的重要性](/articles/voa/1015179.md)
+
+6-2 [中国和阿联酋联合声明 将开展军事经验交流](/articles/voa/1015180.md)
+
 6-2 [泰国即将实现同性婚姻合法化 LGBTQ+展开“骄傲月”游行](/articles/voa/1015181.md)
 
 6-2 [印度大选落幕 莫迪有望连任](/articles/voa/1015182.md)
@@ -596,8 +600,4 @@
 5-21 [美韩为更新防卫费分担特别协定举行第二轮谈判](/articles/voa/1015477.md)
 
 5-21 [不满日韩议员出席台湾总统就职 中国抗议称其“违反一中原则”](/articles/voa/1015478.md)
-
-5-21 [与美国不同调 法国称支持国际刑事法院寻求逮捕以色列和哈马斯领导人](/articles/voa/1015479.md)
-
-5-21 [法属新喀里多尼亚暴乱未歇 澳大利亚、新西兰派专机撤侨](/articles/voa/1015480.md)
 
