--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,7 +3,11 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-2 [【404文库】联合早报｜《南都周刊》员工签名挽留长平](/articles/cdt/340119.md)
+
 6-2 [每日一语 2024.6.1](/articles/cdt/340129.md)
+
+6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（三）](/articles/cdt/340132.md)
 
 6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（二）](/articles/cdt/340134.md)
 
@@ -596,8 +600,4 @@
 4-29 [半熟财经｜义乌电商，追爆品的人](/articles/cdt/341194.md)
 
 4-29 [亮见｜毫无人性，遥遥领先！](/articles/cdt/341195.md)
-
-4-29 [特正经的张某某｜中国人没有尊严感的一生](/articles/cdt/341197.md)
-
-4-29 [建设性意见｜根本不存在“新冠灭活疫苗之父”](/articles/cdt/341198.md)
 
