--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-2 [泽连斯基指责中国施压别国不要参加乌克兰国际和平峰会](/articles/voa/1015177.md)
+
 6-2 [中共竭力抹去记忆 中国人还记得六四吗？](/articles/voa/1015178.md)
 
 6-2 [澳日军方在“香格里拉对话”期间与中国举行会谈 强调对话的重要性](/articles/voa/1015179.md)
@@ -598,6 +600,4 @@
 5-21 [美国和菲律宾同意进行核电合作](/articles/voa/1015475.md)
 
 5-21 [与中国关系惹议 所罗门新总理：澳大利亚仍是首选合作伙伴](/articles/voa/1015476.md)
-
-5-21 [美韩为更新防卫费分担特别协定举行第二轮谈判](/articles/voa/1015477.md)
 
