--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-2 [每日一语 2024.6.2](/articles/cdt/340117.md)
+
 6-2 [【404文库】联合早报｜《南都周刊》员工签名挽留长平](/articles/cdt/340119.md)
 
 6-2 [每日一语 2024.6.1](/articles/cdt/340129.md)
@@ -598,6 +600,4 @@
 4-29 [玖奌杂货店｜今天是林昭去世五十六周年](/articles/cdt/341188.md)
 
 4-29 [半熟财经｜义乌电商，追爆品的人](/articles/cdt/341194.md)
-
-4-29 [亮见｜毫无人性，遥遥领先！](/articles/cdt/341195.md)
 
