--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-2 [新加坡香會落幕 專家：中國對他國關切充耳不聞](/articles/dw/1025368.md)
+
+6-2 [中国防长猛烈抨击台独 台湾回应](/articles/dw/1025369.md)
+
 6-2 [泽连斯基：中国帮助俄罗斯破坏瑞士和平峰会](/articles/dw/1025370.md)
 
 6-2 [朝鲜再对韩空飘600个“垃圾粪便气球”](/articles/dw/1025371.md)
@@ -596,8 +600,4 @@
 5-6 [習近平對歐「分而治之」 首站先會法歐領袖](/articles/dw/1025666.md)
 
 5-6 [以色列关闭境内半岛电视台分部 突袭办公室](/articles/dw/1025667.md)
-
-5-5 [长平观察：为什么违背民意废除死刑？](/articles/dw/1025668.md)
-
-5-5 [人工智能在德企还需迎头赶上](/articles/dw/1025669.md)
 
