--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [韩国与非洲多边峰会在即，尹锡悦聚焦非洲关键矿物质及贸易](/articles/voa/1015175.md)
+
 6-2 [台湾驳斥中国防长对台威胁，指责北京缺乏与台湾政府对话的自信](/articles/voa/1015176.md)
 
 6-2 [泽连斯基指责中国施压别国不要参加乌克兰国际和平峰会](/articles/voa/1015177.md)
@@ -598,6 +600,4 @@
 5-21 [中国社媒禁“炫富拜金” 分析：防贫富对立的民怨转向当局](/articles/voa/1015473.md)
 
 5-21 [中国使出最大力度救房市 分析：可能变相趁火打劫](/articles/voa/1015474.md)
-
-5-21 [美国和菲律宾同意进行核电合作](/articles/voa/1015475.md)
 
