--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [伊朗外交部就海湾岛屿问题召见中国驻德黑兰大使](/articles/voa/1015173.md)
+
 6-3 [美国预计，如果哈马斯接受，以色列将同意停战计划](/articles/voa/1015174.md)
 
 6-3 [韩国与非洲多边峰会在即，尹锡悦聚焦非洲关键矿物质及贸易](/articles/voa/1015175.md)
@@ -598,6 +600,4 @@
 5-21 [耶伦呼吁美欧联手应对中国过剩产能，保护西方制造商的生存](/articles/voa/1015471.md)
 
 5-21 [北京制裁对华强硬而又友台的美国前国会议员加拉格尔](/articles/voa/1015472.md)
-
-5-21 [中国社媒禁“炫富拜金” 分析：防贫富对立的民怨转向当局](/articles/voa/1015473.md)
 
