--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-3 [网易新闻｜武汉大学教授调研：地方治理信用透支已成常态，政府成当地最大“老赖”](/articles/cdt/340109.md)
+
+6-3 [兽爷｜消失的独角兽](/articles/cdt/340112.md)
+
 6-3 [【404媒体】“要么在来的路上被拒之门外；要么被压在仓库里，落满了灰尘；抑或是早早就被扼杀于脑海和案头”(外二篇）](/articles/cdt/340115.md)
 
 6-2 [每日一语 2024.6.2](/articles/cdt/340117.md)
@@ -596,8 +600,4 @@
 4-30 [建设性意见｜把病毒学家逼成流浪汉，就不怕实验室里的病毒也流浪上海吗？](/articles/cdt/341178.md)
 
 4-29 [知识分子｜在中国，“学二代”现象正在蔓延？](/articles/cdt/341184.md)
-
-4-29 [剑客写字的地方｜他们证明自己爱国的方式：对“弱者”出手！](/articles/cdt/341186.md)
-
-4-29 [玖奌杂货店｜今天是林昭去世五十六周年](/articles/cdt/341188.md)
 
