--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-3 [台湾邦交国帕劳遭黑客攻击，是否出于政治原因？](/articles/nyt/1042710.md)
+
 6-3 [“美中关系晴雨表”：香格里拉对话凸显双方分歧](/articles/nyt/1042711.md)
 
 6-3 [声援、警惕与担忧：世界各国密切关注特朗普政治前景](/articles/nyt/1042712.md)
@@ -598,6 +600,4 @@
 2-28 [美国陆军削减2.4万个职位，重点继续转向对抗中俄](/articles/nyt/1043008.md)
 
 2-27 [瑞典即将加入北约，这对欧洲意味着什么](/articles/nyt/1043009.md)
-
-2-27 [带着“奶奶跟外婆”进军奥斯卡](/articles/nyt/1043010.md)
 
