--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [内塔尼亚胡的助手称 以色列会接受拜登“有缺陷的加沙方案”](/articles/voa/1015169.md)
+
 6-3 [林培瑞：我们为什么记住六四?](/articles/voa/1015170.md)
 
 6-3 [香格里拉对话会落幕：中国把对话会当成“权力游戏”？ 菲律宾总统划“红线”](/articles/voa/1015171.md)
@@ -598,6 +600,4 @@
 5-22 [港府称继续跟踪网络平台是否违法播放抗议歌曲“愿荣光归香港”](/articles/voa/1015467.md)
 
 5-22 [美国启动新一轮对华关税后，印度企业担忧中国商品倾销风险](/articles/voa/1015468.md)
-
-5-21 [彭博社：台湾一旦落入中共之手，台积电的设备将立刻陷入瘫痪](/articles/voa/1015469.md)
 
