--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [墨西哥举行大选 将产生首位女总统](/articles/voa/1015168.md)
+
 6-3 [内塔尼亚胡的助手称 以色列会接受拜登“有缺陷的加沙方案”](/articles/voa/1015169.md)
 
 6-3 [林培瑞：我们为什么记住六四?](/articles/voa/1015170.md)
@@ -598,6 +600,4 @@
 5-22 [梵蒂冈同时对台海两岸释善意：特使会晤赖清德，国务卿会晤上海教区主教](/articles/voa/1015466.md)
 
 5-22 [港府称继续跟踪网络平台是否违法播放抗议歌曲“愿荣光归香港”](/articles/voa/1015467.md)
-
-5-22 [美国启动新一轮对华关税后，印度企业担忧中国商品倾销风险](/articles/voa/1015468.md)
 
