--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-3 [阿强同志｜眼睁睁看着泰国人把同性恋的钱挣走了](/articles/cdt/340107.md)
+
 6-3 [网易新闻｜武汉大学教授调研：地方治理信用透支已成常态，政府成当地最大“老赖”](/articles/cdt/340109.md)
 
 6-3 [兽爷｜消失的独角兽](/articles/cdt/340112.md)
@@ -598,6 +600,4 @@
 4-30 [每日一语 2024.4.29](/articles/cdt/341177.md)
 
 4-30 [建设性意见｜把病毒学家逼成流浪汉，就不怕实验室里的病毒也流浪上海吗？](/articles/cdt/341178.md)
-
-4-29 [知识分子｜在中国，“学二代”现象正在蔓延？](/articles/cdt/341184.md)
 
