--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-3 [天安门的鲜血推倒了柏林墙？](/articles/dw/1025359.md)
+
+6-3 [泽连斯基到访马尼拉 北京否认向他国施压](/articles/dw/1025360.md)
+
+6-3 [封口费案：陪审团一致判川普有罪](/articles/dw/1025361.md)
+
 6-3 [曼海姆持刀袭击中负伤的德国警察不治身亡](/articles/dw/1025362.md)
 
 6-3 [长平观察：论中文互联网的倒掉](/articles/dw/1025363.md)
@@ -594,10 +600,4 @@
 5-6 [澳防长：中国战机危险动作不可接受](/articles/dw/1025657.md)
 
 5-6 [打破纪录！法国面包师夺回最长法棍面包荣誉](/articles/dw/1025658.md)
-
-5-6 [不敌竞争 欧洲汽车零部件供应商面临穷途末路](/articles/dw/1025659.md)
-
-5-6 [俄罗斯宣布即将举行战术核演习 回应英法“挑衅性言论”](/articles/dw/1025660.md)
-
-5-6 [电动车旧电池怎么处理？回收利用！](/articles/dw/1025661.md)
 
