--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-3 [建设性意见｜乌克兰如果战斗到最后一人，值得吗？](/articles/cdt/340097.md)
+
+6-3 [木蹊说｜铁头撒尿的“勇气”，是被逼出来的](/articles/cdt/340099.md)
+
 6-3 [吃瓜体｜国防大学将军喊话泽连斯基：要考虑乌克兰人民的价值……](/articles/cdt/340104.md)
 
 6-3 [阿强同志｜眼睁睁看着泰国人把同性恋的钱挣走了](/articles/cdt/340107.md)
@@ -596,8 +600,4 @@
 4-30 [张3丰的世界｜哥大抗议现场，一位中国人失声痛哭](/articles/cdt/341153.md)
 
 4-30 [【404媒体】Zlibrary Official｜再见，中国读者。](/articles/cdt/341155.md)
-
-4-30 [【404文库】21世纪经济报道｜反思问界M7事故：“夸张宣传”遭反噬，“遥遥领先”的代价不应该是生命](/articles/cdt/341171.md)
-
-4-30 [每日一语 2024.4.29](/articles/cdt/341177.md)
 
