--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-3 [墨西哥选出首位女总统](/articles/dw/1025357.md)
+
+6-3 [黄仁勋称台湾“重要国家”  网民：就当没听到](/articles/dw/1025358.md)
+
 6-3 [天安门的鲜血推倒了柏林墙？](/articles/dw/1025359.md)
 
 6-3 [泽连斯基到访马尼拉 北京否认向他国施压](/articles/dw/1025360.md)
@@ -596,8 +600,4 @@
 5-7 [蕭美琴強調台灣韌性 中批美官員「打台灣牌」](/articles/dw/1025655.md)
 
 5-6 [停止乌战、公平贸易：马克龙、冯德莱恩向习近平施压](/articles/dw/1025656.md)
-
-5-6 [澳防长：中国战机危险动作不可接受](/articles/dw/1025657.md)
-
-5-6 [打破纪录！法国面包师夺回最长法棍面包荣誉](/articles/dw/1025658.md)
 
