--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-3 [泽连斯基突访马尼拉 感谢菲律宾出席乌克兰和平峰会](/articles/voa/1015160.md)
+
 6-3 [聿文视界：35年了，海外反对运动如何从六四吸取精神资源](/articles/voa/1015161.md)
 
 6-3 [六四下一代 “坎坷但无悔”的真实版《美丽人生》](/articles/voa/1015162.md)
@@ -598,6 +600,4 @@
 5-22 [在强烈抗议的压力下，以色列通信部长下令归还扣押的美联社设备](/articles/voa/1015458.md)
 
 5-22 [分析人士：在普京与习近平拥抱的背后，俄罗斯是个小伙伴](/articles/voa/1015459.md)
-
-5-22 [美商务部发布有关人工智能安全的战略愿景，组建与盟友的合作网络](/articles/voa/1015460.md)
 
