--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-3 [每日一语 2024.6.3](/articles/cdt/340085.md)
+
+6-3 [北青深一度｜一桩被撤诉的污染环境案，牵出警察受贿线索](/articles/cdt/340089.md)
+
 6-3 [冰川思享号｜斯坦福博士报考乡镇公务员，一个多么残酷的选择](/articles/cdt/340091.md)
 
 6-3 [风声OPINION丨对待网约车，为何中央政府松，地方政府紧？](/articles/cdt/340093.md)
@@ -596,8 +600,4 @@
 5-1 [每日一语 2024.4.30](/articles/cdt/341139.md)
 
 5-1 [关尔东｜大厂忙着踢皮球的时候也请看看脚下的人](/articles/cdt/341141.md)
-
-5-1 [艾晓明｜甘粹先生专访：“因为我的心中还有个林昭”](/articles/cdt/341143.md)
-
-5-1 [摇摆编辑小组｜张永振：一个病毒学家的编年史](/articles/cdt/341145.md)
 
