--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-4 [台湾陆委会在六四前夕呼吁北京面对历史尊重民主](/articles/voa/1015155.md)
+
+6-4 [加州自由雕塑公园再现“六四”前夜场景 组织者：保留记忆，一代一代，最终推翻共产集权](/articles/voa/1015156.md)
+
 6-3 [六四35周年前夕，人权观察谴责中共当局封堵一切纪念活动，抹杀六四记忆](/articles/voa/1015157.md)
 
 6-3 [莫迪如胜选，将出台改革措施让印度制造业赶超中国](/articles/voa/1015158.md)
@@ -596,8 +600,4 @@
 5-22 [人权组织报告：中国正在加速藏族农村人口的强制城市化](/articles/voa/1015453.md)
 
 5-22 [联合国暂停在拉法分发食物](/articles/voa/1015454.md)
-
-5-22 [把互联网变成“内联网”，中国对周边国家输出数字威权主义令人担忧](/articles/voa/1015455.md)
-
-5-22 [中俄军事技术合作势头强劲，美国恐难以遏制？](/articles/voa/1015456.md)
 
