--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-4 [内塔尼亚胡淡化加沙立即停火的前景](/articles/voa/1015145.md)
+
+6-4 [亨特·拜登联邦枪支案陪审员挑选完毕](/articles/voa/1015146.md)
+
+6-4 [报道：拜登准备发布行政令，若南部边境每日移民人数达2500，便停止受理庇护申请](/articles/voa/1015147.md)
+
 6-4 [中国多家网站六四前夕再次禁止更换头像，年轻用户以为是为高考做准备](/articles/voa/1015148.md)
 
 6-4 [哈里斯副总统本月将出席在瑞士举行的乌克兰和平峰会](/articles/voa/1015149.md)
@@ -594,10 +600,4 @@
 5-22 [中国官媒斥赖清德为“麻烦制造者” 学者:台湾准备好应对外交、军事威胁](/articles/voa/1015443.md)
 
 5-22 [菲海军中将谴责中国武官对电话交谈秘密录音 否认与北京达成任何交易](/articles/voa/1015444.md)
-
-5-22 [全球人工智能安全峰会发表《首尔宣言》](/articles/voa/1015445.md)
-
-5-22 [日本、菲律宾拟7月举行外交国防“2+2”会议](/articles/voa/1015446.md)
-
-5-22 [日本称中国大使对日本议员参加台湾总统就职典礼的批评“极不恰当”](/articles/voa/1015447.md)
 
