--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-4 [德国基本法，生日快乐！](/articles/dw/1025351.md)
+
+6-4 [专访林培瑞：八九六四和“向前看”](/articles/dw/1025352.md)
+
 6-3 [日本靖国神社遭涂鸦](/articles/dw/1025353.md)
 
 6-3 [六四前夕 港警共逮捕八名社媒发帖民众](/articles/dw/1025354.md)
@@ -596,8 +600,4 @@
 5-7 [总理间谍案：1974年5月勃兰特引咎辞职](/articles/dw/1025649.md)
 
 5-7 [“习大哥来了”——塞尔维亚为何频繁向中国“送秋波”](/articles/dw/1025650.md)
-
-5-7 [德国人生病了怎么办？](/articles/dw/1025651.md)
-
-5-7 [習近平訪法：聯合聲明談中東未提俄烏](/articles/dw/1025652.md)
 
