--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-4 [北京指英国MI6策反中国公务员夫妇从事间谍活动](/articles/nyt/1042709.md)
+
 6-3 [台湾邦交国帕劳遭黑客攻击，是否出于政治原因？](/articles/nyt/1042710.md)
 
 6-3 [“美中关系晴雨表”：香格里拉对话凸显双方分歧](/articles/nyt/1042711.md)
@@ -598,6 +600,4 @@
 2-28 [中国电动汽车会摧毁美国车企吗](/articles/nyt/1043007.md)
 
 2-28 [美国陆军削减2.4万个职位，重点继续转向对抗中俄](/articles/nyt/1043008.md)
-
-2-27 [瑞典即将加入北约，这对欧洲意味着什么](/articles/nyt/1043009.md)
 
