--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-4 [在持续动荡的世界，我们如何应对“供应链大混乱”](/articles/nyt/1042708.md)
+
 6-4 [北京指英国MI6策反中国公务员夫妇从事间谍活动](/articles/nyt/1042709.md)
 
 6-3 [台湾邦交国帕劳遭黑客攻击，是否出于政治原因？](/articles/nyt/1042710.md)
@@ -598,6 +600,4 @@
 2-28 [在胡志明市，喝一杯美味越南咖啡](/articles/nyt/1043006.md)
 
 2-28 [中国电动汽车会摧毁美国车企吗](/articles/nyt/1043007.md)
-
-2-28 [美国陆军削减2.4万个职位，重点继续转向对抗中俄](/articles/nyt/1043008.md)
 
