--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-4 [“肮脏挑衅”：关于朝鲜投放的垃圾气球，你需要了解的](/articles/nyt/1042707.md)
+
 6-4 [在持续动荡的世界，我们如何应对“供应链大混乱”](/articles/nyt/1042708.md)
 
 6-4 [北京指英国MI6策反中国公务员夫妇从事间谍活动](/articles/nyt/1042709.md)
@@ -598,6 +600,4 @@
 2-28 [纳瓦尔尼遗孀能成为新的反普京领袖吗](/articles/nyt/1043005.md)
 
 2-28 [在胡志明市，喝一杯美味越南咖啡](/articles/nyt/1043006.md)
-
-2-28 [中国电动汽车会摧毁美国车企吗](/articles/nyt/1043007.md)
 
