--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -49,6 +49,8 @@
 
 6-1 [西坡原创｜网友不许励志，官方不许躺平](/articles/cdt/340159.md)
 
+6-4 [【CDT报告汇·六四35周年】大声专访CDT创始人萧强：“六四”开枪后，我为何放弃美国博士学业回到北京？](/articles/cdt/340165.md)
+
 6-2 [【CDT报告汇·六四35周年】大声专访吴仁华：天安门事件35周年，再追问屠杀与镇压（一）](/articles/cdt/340166.md)
 
 6-2 [【CDT周报】第172期：“主因是什么”创作出超越苏联笑话的作品](/articles/cdt/340168.md)
@@ -598,6 +600,4 @@
 5-1 [维舟｜我们对外部世界的看法是有问题的](/articles/cdt/341136.md)
 
 5-1 [每日一语 2024.4.30](/articles/cdt/341139.md)
-
-5-1 [关尔东｜大厂忙着踢皮球的时候也请看看脚下的人](/articles/cdt/341141.md)
 
