--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-4 [六四天安门大屠杀35周年，美国国会资深议员表达对民主的支持](/articles/voa/1015138.md)
+
+6-4 [华盛顿集会纪念六四35周年 前学运领袖周锋锁看到传承希望](/articles/voa/1015139.md)
+
 6-4 [美国提出新的联合国决议 力促结束加沙战争](/articles/voa/1015140.md)
 
 6-4 [备受争议的中国公司将承建格鲁吉亚黑海大型项目](/articles/voa/1015141.md)
@@ -596,8 +600,4 @@
 5-23 [爱尔兰、挪威和西班牙三国承认巴勒斯坦国](/articles/voa/1015436.md)
 
 5-23 [英国防大臣首次指责中国向俄罗斯提供致命援助](/articles/voa/1015437.md)
-
-5-23 [中国官媒斥赖清德为“麻烦制造者” 学者: 台湾准备好应对外交、军事威胁](/articles/voa/1015438.md)
-
-5-23 [中国考虑对美欧进行反制，美欧汽车关税最高可提高至25%](/articles/voa/1015439.md)
 
