--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-4 [《大纪元时报》高管涉嫌洗钱在美国被捕](/articles/nyt/1042706.md)
+
 6-4 [“肮脏挑衅”：关于朝鲜投放的垃圾气球，你需要了解的](/articles/nyt/1042707.md)
 
 6-4 [在持续动荡的世界，我们如何应对“供应链大混乱”](/articles/nyt/1042708.md)
@@ -598,6 +600,4 @@
 2-29 [碧桂园遭债权人提起清盘呈请](/articles/nyt/1043004.md)
 
 2-28 [纳瓦尔尼遗孀能成为新的反普京领袖吗](/articles/nyt/1043005.md)
-
-2-28 [在胡志明市，喝一杯美味越南咖啡](/articles/nyt/1043006.md)
 
