--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-4 [南中国海局势持续紧张 菲律宾称军人握紧武器但否认瞄准中国海警](/articles/voa/1015137.md)
+
 6-4 [六四天安门大屠杀35周年，美国国会资深议员表达对民主的支持](/articles/voa/1015138.md)
 
 6-4 [华盛顿集会纪念六四35周年 前学运领袖周锋锁看到传承希望](/articles/voa/1015139.md)
@@ -598,6 +600,4 @@
 5-23 [众议院议长告诉美国之音：乌克兰应能够“以其认为合适的方式实施战争”](/articles/voa/1015435.md)
 
 5-23 [爱尔兰、挪威和西班牙三国承认巴勒斯坦国](/articles/voa/1015436.md)
-
-5-23 [英国防大臣首次指责中国向俄罗斯提供致命援助](/articles/voa/1015437.md)
 
