--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,10 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-4 [剑客写字的地方｜喊话让乌克兰投降，很过瘾吧？](/articles/cdt/340022.md)
+
+6-4 [六神磊磊读金庸｜苟仲文的利益](/articles/cdt/340025.md)
+
 6-4 [【旧文重温】理想国｜《我，幸存者》布莱希特](/articles/cdt/340029.md)
 
 6-4 [万安公墓“六四”难属｜“六四”35周年万安公墓祭文](/articles/cdt/340037.md)
@@ -596,8 +600,4 @@
 5-1 [王五四｜中国病人的爹味良药](/articles/cdt/341126.md)
 
 5-1 [林中的维吉尔｜惨烈撞燃之后，他们为什么还愿意信任国产车](/articles/cdt/341133.md)
-
-5-1 [现实的模样｜上演过“腐败分子批腐败”的司法“老虎”落马了](/articles/cdt/341134.md)
-
-5-1 [界面新闻｜研究：流动人口失业率将在2027年达到高峰](/articles/cdt/341135.md)
 
