--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,12 @@
 德国之声
 ------
 
+6-4 [中国房地产见曙光？专家担心步日本后尘](/articles/dw/1025338.md)
+
+6-4 [嫦娥六号完成采样 从月球起飞](/articles/dw/1025339.md)
+
+6-4 [欧中月球合作 是否面临政治风险？](/articles/dw/1025340.md)
+
 6-4 [达赖喇嘛本月将前往美国接受治疗](/articles/dw/1025341.md)
 
 6-4 [枪指中国海警?菲律宾驳斥](/articles/dw/1025342.md)
@@ -594,10 +600,4 @@
 5-8 [客座评论：“劳动节”与“劳工节“之辩](/articles/dw/1025636.md)
 
 5-8 [港法院頒令禁制傳播《願榮光歸香港》](/articles/dw/1025637.md)
-
-5-8 [技术战升级 美政府撤销华为供货许可](/articles/dw/1025638.md)
-
-5-8 [德国接连发生政治人物遭袭案件 柏林前市长受伤](/articles/dw/1025639.md)
-
-5-8 [欧洲拉比大会主席荣获2024查理曼奖](/articles/dw/1025640.md)
 
