--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-4 [六四纪念日中港气氛紧张，专家：国际社会对中国的不安情绪比天安门事件之后更加广泛](/articles/voa/1015130.md)
+
+6-4 [朝鲜垃圾气球入侵后，韩国恢复韩朝边境军事活动](/articles/voa/1015131.md)
+
 6-4 [35年后，台湾谁在纪念六四？](/articles/voa/1015132.md)
 
 6-4 [八九学运35周年 外地学生当年的六四](/articles/voa/1015133.md)
@@ -596,8 +600,4 @@
 5-23 [英国首相呼吁提前举行大选](/articles/voa/1015428.md)
 
 5-23 [维吾尔人组织称在法国遭遇中国“镇压”](/articles/voa/1015429.md)
-
-5-23 [被控用虚假文件向中国出口生化品的佛州居民认罪，涉案公司因积极举报和配合调查而免于起诉](/articles/voa/1015430.md)
-
-5-23 [美国宣布提高对华关税细节，部分关税将于8月1日开始生效](/articles/voa/1015431.md)
 
