--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-5 [拜登签署行政命令，以熔断机制阻止美墨边境移民大量涌入](/articles/voa/1015128.md)
+
 6-4 [在某个“敏感日子”里，美英等西方国家驻港机构以各种方式纪念六四](/articles/voa/1015129.md)
 
 6-4 [六四纪念日中港气氛紧张，专家：国际社会对中国的不安情绪比天安门事件之后更加广泛](/articles/voa/1015130.md)
@@ -598,6 +600,4 @@
 5-23 [美国出现第二例人类因奶牛疫情而感染禽流感的病例](/articles/voa/1015426.md)
 
 5-23 [瑞典向乌克兰提供总额70亿美元的军援](/articles/voa/1015427.md)
-
-5-23 [英国首相呼吁提前举行大选](/articles/voa/1015428.md)
 
