--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-5 [六四35周年港警维园一带严防 学者指禁不住悼念烛光遍全球](/articles/voa/1015122.md)
+
 6-5 [美国务卿布林肯就六四事件35周年发表声明(全文翻译)](/articles/voa/1015123.md)
 
 6-5 [台北六四35周年烛光晚会 逾6000人出席创新高](/articles/voa/1015124.md)
@@ -598,6 +600,4 @@
 5-23 [全球竞争加剧下 韩国宣布190亿美元的芯片支持计划](/articles/voa/1015420.md)
 
 5-23 [区域紧张局势升高之际 美国宣布将再举行环太平洋军演](/articles/voa/1015421.md)
-
-5-23 [中日韩将于首尔举行四年半来的首次领导人峰会](/articles/voa/1015422.md)
 
