--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,16 @@
 美国之音
 ------
 
+6-5 [美司法部长加兰德反驳共和党人声称他将刑事调查政治化的说法](/articles/voa/1015111.md)
+
+6-5 [菲律宾：中国在有争议海域抢走菲军空投物资](/articles/voa/1015112.md)
+
+6-5 [莫迪将赢得微弱多数，但印度人民党的席次减少](/articles/voa/1015113.md)
+
+6-5 [天安门事件35周年 美国会两党领袖回忆“坦克人”：自由之光将继续燃烧](/articles/voa/1015114.md)
+
+6-5 [5大要点看懂拜登的移民行政命令](/articles/voa/1015115.md)
+
 6-5 [俄罗斯：乌克兰境内的法国军事教官是俄军袭击的“合法目标”](/articles/voa/1015116.md)
 
 6-5 [拜登签署行政命令限制边境寻求庇护者，政治光谱左右两边皆表反对](/articles/voa/1015117.md)
@@ -590,14 +600,4 @@
 5-24 [俄导弹袭击哈尔科夫市打死七人,泽连斯基呼吁盟友提供更多武器](/articles/voa/1015409.md)
 
 5-24 [推特上的中国：北京环台军演吓到了谁？](/articles/voa/1015410.md)
-
-5-24 [新闻周刊：乌军过去八天摧毁至少六架俄军战机](/articles/voa/1015411.md)
-
-5-24 [拜登与肯尼亚总统鲁托在白宫举行峰会，呼吁中国等债权国减免非洲债务](/articles/voa/1015412.md)
-
-5-24 [德国陆军或明年首次赴日联合演习 关注印太台海安全](/articles/voa/1015413.md)
-
-5-24 [哈马斯侮辱以色列女兵人质视频引爆社媒 以政府下令重启与哈马斯谈判争取人质获释](/articles/voa/1015414.md)
-
-5-24 [TikTok为改善形象在美欧大选年出手限制中俄官媒传播虚假信息](/articles/voa/1015415.md)
 
