--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-5 [拜登启程访问法国和意大利 强调对欧洲的安全承诺](/articles/voa/1015101.md)
+
+6-5 [欧洲议会选举在即，你需要知道的几件事](/articles/voa/1015102.md)
+
 6-5 [数百人于伦敦中国大使馆外悼念六四 英国多处有纪念活动](/articles/voa/1015103.md)
 
 6-5 [国家囚徒35载 墙内六四一代冷眼笑看“荒唐”中国](/articles/voa/1015104.md)
@@ -596,8 +600,4 @@
 5-24 [批香港经贸办沦为中共分支 港人团体呼吁美国尽快通过立法关闭](/articles/voa/1015399.md)
 
 5-24 [美国欢迎肯尼亚总统国事访问，两国提升安全关系](/articles/voa/1015400.md)
-
-5-24 [欧洲议会的一个右翼党团驱逐德国选择党代表团](/articles/voa/1015401.md)
-
-5-24 [三名美军在修建加沙人道码头期间受非战斗伤](/articles/voa/1015402.md)
 
