--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-5 [“青鸟行动”六四当天在纽约时报广场做广告 全天播放“挺台湾民主”视频](/articles/voa/1015099.md)
+
 6-5 [美国联邦调查局警告:中国威胁规模巨大](/articles/voa/1015100.md)
 
 6-5 [拜登启程访问法国和意大利 强调对欧洲的安全承诺](/articles/voa/1015101.md)
@@ -598,6 +600,4 @@
 5-24 [中国继续对台“惩罚性”演习并检验“夺权”能力](/articles/voa/1015397.md)
 
 5-24 [拜登政府与以色列紧张加剧之际 美众议院议长邀请内塔尼亚胡到国会发表讲话](/articles/voa/1015398.md)
-
-5-24 [批香港经贸办沦为中共分支 港人团体呼吁美国尽快通过立法关闭](/articles/voa/1015399.md)
 
