--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-5 [解读印度大选：莫迪再次连任，但不再不可战胜](/articles/nyt/1042703.md)
+
 6-5 [在加速崩塌的中国互联网上，正在消失的集体记忆](/articles/nyt/1042704.md)
 
 6-5 [为什么说新冠病毒可能是从武汉病毒研究所泄漏的](/articles/nyt/1042705.md)
@@ -598,6 +600,4 @@
 2-29 [从任志强到“李老师”，中国的纳瓦尔尼们](/articles/nyt/1043001.md)
 
 2-29 [拜登签署行政令，限制向中俄等国出售美国敏感数据](/articles/nyt/1043002.md)
-
-2-29 [中国扩大保密法覆盖范围，在华外企运营风险加剧](/articles/nyt/1043003.md)
 
