--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-5 [23條後首個六四：港人夾縫中默念致哀](/articles/dw/1025335.md)
+
+6-5 [六四、天安门—不能忘却的记忆](/articles/dw/1025336.md)
+
 6-5 [路透：中國AI企業降產品性能 確保台積電接單](/articles/dw/1025337.md)
 
 6-4 [中国房地产见曙光？专家担心步日本后尘](/articles/dw/1025338.md)
@@ -596,8 +600,4 @@
 5-8 [阿斯利康在全球下架Vaxzevria新冠疫苗](/articles/dw/1025633.md)
 
 5-8 [习近平开始访问欧洲 首站巴黎](/articles/dw/1025634.md)
-
-5-8 [欧洲之行最后一站：习近平周三到访匈牙利](/articles/dw/1025635.md)
-
-5-8 [客座评论：“劳动节”与“劳工节“之辩](/articles/dw/1025636.md)
 
