--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-5 [拜登移民政策逆转，限制寻求庇护者入境美国](/articles/nyt/1042702.md)
+
 6-5 [解读印度大选：莫迪再次连任，但不再不可战胜](/articles/nyt/1042703.md)
 
 6-5 [在加速崩塌的中国互联网上，正在消失的集体记忆](/articles/nyt/1042704.md)
@@ -598,6 +600,4 @@
 3-1 [拜登称中国联入互联网汽车给美国国家安全带来风险](/articles/nyt/1043000.md)
 
 2-29 [从任志强到“李老师”，中国的纳瓦尔尼们](/articles/nyt/1043001.md)
-
-2-29 [拜登签署行政令，限制向中俄等国出售美国敏感数据](/articles/nyt/1043002.md)
 
