--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,8 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-5 [知鸦读书｜马国川：我们该如何看待，发生在眼前的社会大事？](/articles/cdt/339916.md)
+
 6-5 [歪脑｜35年了 不同世代的“六四”纪念 —— 以个体的坚韧 对抗政治高压与时光无情](/articles/cdt/339948.md)
 
 6-5 [WOMEN我们｜征文来稿：三位大陆“80后”，不愿忘却的“六四回忆”](/articles/cdt/339964.md)
@@ -598,6 +600,4 @@
 5-3 [城市的地得｜有预谋的清场：哥大学生抗议行动的最后一刻](/articles/cdt/341090.md)
 
 5-3 [卖杏花｜此次事故最大教训：开车要么快，要么慢](/articles/cdt/341105.md)
-
-5-2 [每日一语 2024.5.1](/articles/cdt/341109.md)
 
