--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+6-5 [纪念六四从香港移师海外](/articles/dw/1025330.md)
+
+6-5 [印度大选结果：莫迪虽胜犹败？](/articles/dw/1025331.md)
+
+6-5 [全球百万富翁数量创新高 德国、中国排名靠前](/articles/dw/1025332.md)
+
+6-5 [德国军舰航向南中国海执行印太部属](/articles/dw/1025333.md)
+
 6-5 [不參加瑞士和平峰會挨批 中方稱「自主決定」](/articles/dw/1025334.md)
 
 6-5 [23條後首個六四：港人夾縫中默念致哀](/articles/dw/1025335.md)
@@ -592,12 +600,4 @@
 5-9 [北京首入列全球前十富有城市 深圳富豪增140%](/articles/dw/1025628.md)
 
 5-9 [美擬禁中國聯網汽車 加碼限縮AI科技出口](/articles/dw/1025629.md)
-
-5-8 [塞尔维亚与中国签署历史性协议 构建“共同命运体”](/articles/dw/1025630.md)
-
-5-8 [专访：习近平访欧以打破欧美阵线](/articles/dw/1025631.md)
-
-5-8 [美国正权衡是否认定越南为市场经济国家](/articles/dw/1025632.md)
-
-5-8 [阿斯利康在全球下架Vaxzevria新冠疫苗](/articles/dw/1025633.md)
 
