--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-6 [以军对加沙中部展开空袭 宣布开始“针对性行动”](/articles/voa/1015087.md)
+
 6-5 [美国驻黎巴嫩大使馆发生枪击，黎安全部门已加强对使馆的保护](/articles/voa/1015088.md)
 
 6-5 [乌克兰回应王毅“六点共识”，暗批中国在乌克兰问题上立场失衡](/articles/voa/1015089.md)
@@ -598,6 +600,4 @@
 5-25 [联合国国际法院下令以色列停止对加沙南部拉法市的进攻](/articles/voa/1015385.md)
 
 5-24 [台湾立法院朝野对立 分析人士:警惕中共挑唆](/articles/voa/1015386.md)
-
-5-24 [菲防长谴责中国海警新规为“挑衅”，马尼拉将继续扩大安全联盟](/articles/voa/1015387.md)
 
