--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-6 [拜登将参加诺曼底登陆80周年纪念活动，强调跨大西洋团结的重要性](/articles/voa/1015086.md)
+
 6-6 [以军对加沙中部展开空袭 宣布开始“针对性行动”](/articles/voa/1015087.md)
 
 6-5 [美国驻黎巴嫩大使馆发生枪击，黎安全部门已加强对使馆的保护](/articles/voa/1015088.md)
@@ -598,6 +600,4 @@
 5-25 [巴基斯坦给在恐袭事件遇难的中国人每人赔偿52万美元](/articles/voa/1015384.md)
 
 5-25 [联合国国际法院下令以色列停止对加沙南部拉法市的进攻](/articles/voa/1015385.md)
-
-5-24 [台湾立法院朝野对立 分析人士:警惕中共挑唆](/articles/voa/1015386.md)
 
