--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-6 [波音星际航线飞船首次载人升空，前往国际空间站](/articles/voa/1015085.md)
+
 6-6 [拜登将参加诺曼底登陆80周年纪念活动，强调跨大西洋团结的重要性](/articles/voa/1015086.md)
 
 6-6 [以军对加沙中部展开空袭 宣布开始“针对性行动”](/articles/voa/1015087.md)
@@ -598,6 +600,4 @@
 5-25 [美国宣布向乌克兰提供新的2.75亿美元重大军援](/articles/voa/1015383.md)
 
 5-25 [巴基斯坦给在恐袭事件遇难的中国人每人赔偿52万美元](/articles/voa/1015384.md)
-
-5-25 [联合国国际法院下令以色列停止对加沙南部拉法市的进攻](/articles/voa/1015385.md)
 
