--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,12 @@
 美国之音
 ------
 
+6-6 [美国人口增长缓慢，但外国出生人口总数创下新高](/articles/voa/1015082.md)
+
+6-6 [联合国秘书长警告：限制全球变暖的目标正在逐渐消失](/articles/voa/1015083.md)
+
+6-6 [以色列民族主义者游行穿过耶路撒冷旧城](/articles/voa/1015084.md)
+
 6-6 [波音星际航线飞船首次载人升空，前往国际空间站](/articles/voa/1015085.md)
 
 6-6 [拜登将参加诺曼底登陆80周年纪念活动，强调跨大西洋团结的重要性](/articles/voa/1015086.md)
@@ -594,10 +600,4 @@
 5-25 [被控替香港当局在英国收集情报的两名男子将于明年2月接受审判](/articles/voa/1015380.md)
 
 5-25 [美中防长预计下周将在新加坡会晤](/articles/voa/1015381.md)
-
-5-25 [伊朗：莱希所乘直升机坠毁后起火，没有被袭击迹象](/articles/voa/1015382.md)
-
-5-25 [美国宣布向乌克兰提供新的2.75亿美元重大军援](/articles/voa/1015383.md)
-
-5-25 [巴基斯坦给在恐袭事件遇难的中国人每人赔偿52万美元](/articles/voa/1015384.md)
 
