--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-6 [州上诉法院暂停特朗普佐治亚州选举干预案](/articles/voa/1015072.md)
+
+6-6 [普京就乌军使用远程武器打击俄境内对德国发出警告；拜登与泽连斯基将在欧洲两次会晤](/articles/voa/1015073.md)
+
 6-6 [国际原子能机构理事会通过决议谴责伊朗缺乏合作，中俄投反对票](/articles/voa/1015074.md)
 
 6-6 [美国及其盟国警告：中国正积极“猎头”寻觅西方战斗机飞行员](/articles/voa/1015075.md)
@@ -596,8 +600,4 @@
 5-25 [中日韩即将举行三边领导人峰会 专家：议程中可能跳过敏感地缘政治问题](/articles/voa/1015370.md)
 
 5-25 [中国拒绝危地马拉夏威夷果和咖啡入境 危国总统推测与台湾邦交有关](/articles/voa/1015371.md)
-
-5-25 [网信办推出贯彻“习思想”的聊天机器人，中国人工智能恐沦为笑柄？](/articles/voa/1015372.md)
-
-5-25 [《愿荣光归香港》创作团体：发行商将在所有平台下架这首抗议歌曲](/articles/voa/1015373.md)
 
