--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-6 [欧洲经济为何无力与美中竞争](/articles/nyt/1042699.md)
+
 6-6 [中国政府拯救楼市的做法惹恼了谁](/articles/nyt/1042700.md)
 
 6-6 [“五眼联盟”警告前战斗机飞行员不要帮助培训解放军](/articles/nyt/1042701.md)
@@ -598,6 +600,4 @@
 3-1 [调查显示两名加拿大华裔科学家向中国泄露机密信息](/articles/nyt/1042997.md)
 
 3-1 [具荷拉之死：K-pop“顶流”明星充满挣扎的一生](/articles/nyt/1042998.md)
-
-3-1 [被枪击碎的美国梦：在帕克兰案中失去儿子的中国移民家庭](/articles/nyt/1042999.md)
 
