--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-6 [美国宣布最新3亿美元对台军售 维持F-16战力巩固台湾安全](/articles/voa/1015068.md)
+
+6-6 [美国和伙伴宣布对印太基础设施投资250亿美元](/articles/voa/1015069.md)
+
 6-6 [普京威胁会武装其他国家和势力打击向乌克兰提供武器的西方国家](/articles/voa/1015070.md)
 
 6-6 [澳大利亚和中国在所罗门群岛为竞争影响力正面较量](/articles/voa/1015071.md)
@@ -596,8 +600,4 @@
 5-25 [围台军演收场，台湾平静以对，台军意外显露随时击落解放军军机的能力](/articles/voa/1015366.md)
 
 5-25 [专访许成钢 ：中共为何比苏共长寿？两件事救了中共政权](/articles/voa/1015367.md)
-
-5-25 [人权观察：中国胁迫藏人大规模迁移](/articles/voa/1015368.md)
-
-5-25 [巴布亚新几内亚发生严重山体滑坡 据称已300多人遭活埋](/articles/voa/1015369.md)
 
