--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,10 @@
 德国之声
 ------
 
+6-6 [国际能源署：2024年清洁能源投资将达2万亿美元](/articles/dw/1025325.md)
+
+6-6 [连日暴雨令德国南部洪涝成灾](/articles/dw/1025326.md)
+
 6-6 [美國批准對台新軍售 27家軍火商齊聚台灣](/articles/dw/1025327.md)
 
 6-6 [五眼聯盟：中國積極吸收西方退役飛官訓練解放軍](/articles/dw/1025328.md)
@@ -596,8 +600,4 @@
 5-9 [美国驱逐舰穿越台海 中方批美国“公开炒作”](/articles/dw/1025623.md)
 
 5-9 [杭州、西安全面取消住房限购 网民：还是买不起](/articles/dw/1025624.md)
-
-5-9 [基辅暂停对海外适龄服役男子的领事服务](/articles/dw/1025625.md)
-
-5-9 [杭州全面取消住房限购 网民：还是买不起](/articles/dw/1025626.md)
 
