--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-6 [中国房地产股自五月高点暴跌20%，熊来了？](/articles/voa/1015062.md)
+
+6-6 [台湾美国商会：美国两党挺台有望达成美台自由贸易协定](/articles/voa/1015063.md)
+
 6-6 [台湾游客赴中“禁团令”生效 学者:中国拒接赖清德递出的橄榄枝](/articles/voa/1015064.md)
 
 6-6 [中国互联网信息“断崖式”消失，当局红线越设越多](/articles/voa/1015065.md)
@@ -596,8 +600,4 @@
 5-26 [俄罗斯攻击哈尔科夫打死至少6人，打伤几十人](/articles/voa/1015360.md)
 
 5-26 [据称的亵渎触发巴基斯坦穆斯林暴徒对基督徒的暴力攻击](/articles/voa/1015361.md)
-
-5-26 [以色列在加沙各地打击哈马斯，同时可能进行新一轮谈判](/articles/voa/1015362.md)
-
-5-26 [台湾“国会改革”为何惹怒抗议者? 四大争议一次厘清](/articles/voa/1015363.md)
 
