--- a/lists/德国之声.md
+++ b/lists/德国之声.md
@@ -1,6 +1,14 @@
 德国之声
 ------
 
+6-6 [日美韩首次举行海警联合演练](/articles/dw/1025318.md)
+
+6-6 [中国下一个赛场：商业太空竞争](/articles/dw/1025319.md)
+
+6-6 [德语媒体：中国独角兽为什么被美国反超？](/articles/dw/1025320.md)
+
+6-6 [林培瑞：我们为什么记得六四？](/articles/dw/1025321.md)
+
 6-6 [诺曼底登陆80周年的风云变幻](/articles/dw/1025322.md)
 
 6-6 [德国又有政界人士竞选活动中遭到袭击](/articles/dw/1025323.md)
@@ -592,12 +600,4 @@
 5-10 [美中大學合作敏感科技引質疑 美國會討說法](/articles/dw/1025616.md)
 
 5-10 [天津大學遭美制裁 佐治亞理工合作引質疑](/articles/dw/1025617.md)
-
-5-9 [莫斯科大阅兵 普京警告不要挑起全球冲突](/articles/dw/1025618.md)
-
-5-9 [欧洲之行最后一站：习近平到访匈牙利](/articles/dw/1025619.md)
-
-5-9 [发视频被批“冷血”百度副总裁道歉离职](/articles/dw/1025620.md)
-
-5-9 [拜登警告：美国不会为以色列攻击拉法提供武器](/articles/dw/1025621.md)
 
