--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-7 [美国总统拜登在诺曼底登陆纪念活动上讲话 呼吁加强与乌克兰的团结](/articles/voa/1015058.md)
+
+6-7 [泽连斯基参加诺曼底登陆80周年庆典之际，乌军在前线重创俄军](/articles/voa/1015059.md)
+
 6-6 [普京因俄乌战争成国际弃儿，诺曼底登陆纪念活动不见俄代表身影](/articles/voa/1015060.md)
 
 6-6 [赖清德莫迪首次网上直接互动，北京不悦向印度抗议](/articles/voa/1015061.md)
@@ -596,8 +600,4 @@
 5-26 [朝鲜指控美韩加强海空侦蒐后，本周传再发射间谍卫星反击](/articles/voa/1015356.md)
 
 5-26 [台湾艺人接连“被迫”政治表态？ 赖清德：不会是最后一次](/articles/voa/1015357.md)
-
-5-26 [拜登军校演说强调美国对全球盟友的承诺](/articles/voa/1015358.md)
-
-5-26 [孙韵：美中对赖清德520就职演说的反应](/articles/voa/1015359.md)
 
