--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-7 [法官：被判藐视国会的班农必须在7月1日前向监狱报到服刑](/articles/voa/1015057.md)
+
 6-7 [美国总统拜登在诺曼底登陆纪念活动上讲话 呼吁加强与乌克兰的团结](/articles/voa/1015058.md)
 
 6-7 [泽连斯基参加诺曼底登陆80周年庆典之际，乌军在前线重创俄军](/articles/voa/1015059.md)
@@ -598,6 +600,4 @@
 5-26 [巴布亚新几内亚山体滑坡估酿670人死亡，村民冲突阻碍救援通行](/articles/voa/1015355.md)
 
 5-26 [朝鲜指控美韩加强海空侦蒐后，本周传再发射间谍卫星反击](/articles/voa/1015356.md)
-
-5-26 [台湾艺人接连“被迫”政治表态？ 赖清德：不会是最后一次](/articles/voa/1015357.md)
 
