--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-7 [在对中国的担忧日益加剧之际，日美韩海警在日本沿海举行首次联合演练](/articles/voa/1015055.md)
+
+6-7 [波音星际航线停靠国际空间站 中途因技术故障而延迟](/articles/voa/1015056.md)
+
 6-7 [法官：被判藐视国会的班农必须在7月1日前向监狱报到服刑](/articles/voa/1015057.md)
 
 6-7 [美国总统拜登在诺曼底登陆纪念活动上讲话 呼吁加强与乌克兰的团结](/articles/voa/1015058.md)
@@ -596,8 +600,4 @@
 5-26 [中共大兴“株连”“连坐” 海外制造恐怖噤声留学生](/articles/voa/1015353.md)
 
 5-26 [李强、岸田文雄抵达首尔 韩中日睽违四年半举行三边峰会](/articles/voa/1015354.md)
-
-5-26 [巴布亚新几内亚山体滑坡估酿670人死亡，村民冲突阻碍救援通行](/articles/voa/1015355.md)
-
-5-26 [朝鲜指控美韩加强海空侦蒐后，本周传再发射间谍卫星反击](/articles/voa/1015356.md)
 
