--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -3,6 +3,12 @@
 
 5-12 [【重温】李承鹏：写在5.12的爱国帖](/articles/cdt/0.md)
 
+6-7 [建设性意见｜反腐救不了中国足球](/articles/cdt/339861.md)
+
+6-7 [每日一语 2024.6.6](/articles/cdt/339863.md)
+
+6-7 [罗翔｜聚众淫乱与疑罪从无](/articles/cdt/339866.md)
+
 6-6 [冰川思想号｜董明珠这一代企业家，已无法共情年轻打工人](/articles/cdt/339869.md)
 
 6-6 [关注雪饼｜2024.6.15是黄雪琴、王建兵被抓捕第1000天](/articles/cdt/339872.md)
@@ -14,6 +20,8 @@
 6-6 [眼光很亮｜某厕所被曝光配5个管理者，1个保洁员！百年罕见之操作！](/articles/cdt/339892.md)
 
 6-6 [建设性意见｜中国网民对国际关系的常见误解](/articles/cdt/339893.md)
+
+6-7 [【404文库】胡锡进：靖国神社可恨，但去那里撒尿就应该赞吗？](/articles/cdt/339898.md)
 
 6-6 [【CDT报告汇·六四35周年】历史的记忆作为反抗的武器——亲历者王超华、何晓清、林培瑞和萧强谈自己的“六四”](/articles/cdt/339902.md)
 
@@ -592,12 +600,4 @@
 5-4 [费里尼码字了｜朱令案再起微澜，一个上海爷叔最后的倔强|八部半](/articles/cdt/341059.md)
 
 5-4 [【404文库】城市的地得｜烧毁的不是“一建筑”，而是河南人的一部分心灵](/articles/cdt/341064.md)
-
-5-4 [历史押韵｜胖猫的热度为何完爆梅州的热度？](/articles/cdt/341066.md)
-
-5-3 [建设性意见｜梅大高速塌方到底埋了几辆车？非要挖出来才知道吗？](/articles/cdt/341069.md)
-
-5-3 [建设性意见｜梅州高速塌方：一场可以预测但无法避免的灾难](/articles/cdt/341072.md)
-
-5-3 [【404文库】城市的地得｜指向自身的觉醒，只会导向新的困境](/articles/cdt/341074.md)
 
