--- a/lists/纽约时报.md
+++ b/lists/纽约时报.md
@@ -1,6 +1,8 @@
 纽约时报
 ------
 
+6-7 [美国恢复对东南亚太阳能产品征收关税，剑指中国](/articles/nyt/1042696.md)
+
 6-7 [SpaceX重型火箭“星舰”第四次试飞成功](/articles/nyt/1042697.md)
 
 6-6 [健康杀手还是被夸大的风险：你了解“超加工食品”吗](/articles/nyt/1042698.md)
@@ -598,6 +600,4 @@
 3-4 [集体苦难与个体孤独：双雪涛和他笔下的东北](/articles/nyt/1042994.md)
 
 3-1 [普京再打核威胁牌，针对美国和西方有何意图？](/articles/nyt/1042995.md)
-
-3-1 [关于韩国医生大罢工，你应该知道的](/articles/nyt/1042996.md)
 
