--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-7 [四艘中国武装海警船进入日本海域，东京向北京提出抗议](/articles/voa/1015036.md)
+
+6-7 [拜登在巴黎会晤泽连斯基，如何扭转乌克兰战场不利局面成重要议题](/articles/voa/1015037.md)
+
 6-7 [2024年台美国防产业论坛举行 聚焦无人载具和AI情报科技](/articles/voa/1015038.md)
 
 6-7 [中国批“台独课本” 学者：历史课纲扬弃“大中国史观”](/articles/voa/1015039.md)
@@ -596,8 +600,4 @@
 5-27 [中日韩峰会举行 韩日在美中之间平衡避险](/articles/voa/1015334.md)
 
 5-27 [“对中共政权说不”—六四35周年专题研讨会在旧金山举行](/articles/voa/1015335.md)
-
-5-27 [中日韩三边峰会：李强赞扬三国关系的“重启”，朝鲜谴责半岛无核化的呼吁](/articles/voa/1015336.md)
-
-5-27 [菲外交部抗议中国违犯菲主权及权利，单方面在南中国海禁渔](/articles/voa/1015337.md)
 
