--- a/articles/cdt/339859.md
+++ b/articles/cdt/339859.md
@@ -1,5 +1,5 @@
 <!--1717723376000-->
-[衣者褚｜事实证明，政府通报又撒了谎](https://chinadigitaltimes.net/chinese/708716.html)
+[【404文库】衣者褚｜事实证明，政府通报又撒了谎](https://chinadigitaltimes.net/chinese/708716.html)
 ------
 
 <div style="width:42%;float:right;padding-left:20px;"><div class="su-spoiler su-spoiler-style-fancy su-spoiler-icon-chevron-circle" data-scroll-offset="0" data-anchor-in-url="no"><div class="su-spoiler-title" tabindex="0" role="button"><span class="su-spoiler-icon"></span>CDT 档案卡</div><div class="su-spoiler-content su-u-clearfix su-u-trim"><strong>标题：</strong>事实证明，政府通报又撒了谎<br><strong>作者：</strong><a href="https://chinadigitaltimes.net/space/褚朝新" target="_blank">褚朝新</a><br><strong>发表日期：</strong>2024.6.6<br><strong>来源：</strong><a href="https://web.archive.org/web/https://mp.weixin.qq.com/s/RAEO2bsVnrAIC6ytyFouhQ" target="_blank">衣者褚</a><br><strong>主题归类：</strong><a href="https://chinadigitaltimes.net/space/以刑化债" target="_blank">以刑化债</a><br><strong>CDS收藏：</strong><a href="https://chinadigitaltimes.net/space/%E5%85%AC%E6%B0%91%E9%A6%86" target="_blank" rel="noopener">公民馆</a><br><strong>版权说明：</strong>该作品版权归原作者所有。中国数字时代仅对原作进行存档，以对抗中国的网络审查。<a href="https://chinadigitaltimes.net/chinese/copyright">详细版权说明</a>。</div></div></div><p>逆转了，贵州六盘水市水城区抓捕向区政府讨债的企业家的事情逆转了。</p><p>2月份，中国经营报报道，女企业家马艺珈伊为贵州六盘水承建易地扶贫搬迁工程（中央专项扶贫资金项目）、幼儿园、小学等10个政府项目。企业统计认为，该市水城区政府共欠企业约2.2亿元，地方政府一份汇报文件则承认有9000余万元欠款，企业持续讨要工程款8年，<strong>区政府一度提出以1200万元化解所有债务，马和代理律师拒绝，</strong>马和律师们随即被当地公安以涉嫌寻衅滋事罪刑事拘留。</p><p>水城区随即公开通报称：2016年至2019年，贵州鸿瑞腾建筑有限责任公司、贵州艺珈旭建筑工程有限公司、中恒建设集团分别承建的野玉海景区10个项目，项目实际负责人均为《中国经营报》所称女企业家马某某。10个项目中，经法院判决或审计的项目8个，金额11775.52万元，目前已支付11538.9万元；未审计项目2个，根据项目建设单位提供的工程资料金额约4557.19万元，目前已支付3131.7万元。上述10个项目共计金额约16332.71万元，目前已支付14670.6万元，支付比例89.82％。综上，“六盘水市水城区政府共欠企业约2.2亿元”，以及“区里要以1200万元化解所有2亿余元的债务”的报道均不属实。</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/06/post-708716-666260f0902e5." alt="image"></p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/06/post-708716-666260f0976ff." alt="image"></p><p>水城区政府发布通报之后，中国经营报居然自删了稿子，这让很多人误以为媒体真的报道错了。</p><p>可是，我当时获得的官方资料显示真的不是水城区官方通报中说的那样。</p><p>比如，2021年1月12日水城区工业和信息化局给六盘水市减负办的情况报告中说，马老板承接的野玉海景区四个工程未拨付的工程款就有1.131亿元，“反映拖欠事项属实，账款金额属实”。马老板的相关公司承接的另外五个项目，合同总价1.296亿，支付工程款3802.89万元，“反映拖欠事项属实，账款金额待项目审计金额而定。”</p><p><img decoding="async" src="https://chinadigitaltimes.net/chinese/files/2024/06/post-708716-666260f0a54e2." alt="image"></p><p>当时看了当地官方的这些内部资料后，我非常坚定地认为：当下的媒体生存环境很不好，我真的不相信中国经营报敢在没有证据的情况下如此严厉地监督地方政府。</p><p>于是，在2月27日撰写的《<a href="http://mp.weixin.qq.com/s?__biz=MzA5OTUxOTI3Nw==&amp;mid=2451686770&amp;idx=1&amp;sn=580f10828c816e53f0a67ac94640a004&amp;chksm=87547b30b023f226ee6e57ffc083960f99ddb818a2ec0d96fad131bdc4416e7985c542f9f2fd&amp;scene=21#wechat_redirect">说媒体报道失实的官方不出示证据，那我来！</a>》（点击蓝色标题即可阅读全文）一文中说了以下的话：我怎么感觉水城区又要把“官方通报”的名声搞臭一次了。总这么玩，将来谁还信“官方通报”啊。</p><p>最新的调查结果显示，被我言中，水城区的官方通报耍流氓了。</p><p>6月6月，贵州省联合调查组发布情况通报称：马某某伊承建的10个项目中，已经法院审判、仲裁裁决确认或者双方达成一致的有7个项目，应付工程款11877.45万元，项目业主方于案发前已支付8821.1万元，欠付的3056.35万元已于2024年5月17日支付完毕；另外3个停建未完工项目，因项目管理混乱，项目所完成工程量短期难以准确核算，项目业主方已于案发前支付工程款5549.34万元，相关纠纷仍处在民事诉讼程序依法审理之中。</p><p>水城区2月份的官方通报称，“上述10个项目共计金额约16332.71万元，目前已支付14670.6万元，支付比例89.82％。”算一算啊，水城区只承认十个项目总欠款1662.11万元。但贵州省联合调查组说10个项目中仅仅7个项目就欠3056.35万元，5月17日已经支付，还有三个项目没有核算。</p><p>水城区的“官方通报”是不是撒谎了？水城区是不是真的又把“官方通报”的名声搞臭了一次？</p><p>贵州省联合调查组的情况通报还说，经过异地检察机关审查，企业老板和律师等人为了讨债采取的跟踪、偷拍他人等行为违法犯罪情节轻微，不起诉，被抓的企业老板和律师们目前都已释放了。</p><p>幸好，贵州省的“官方通报”挽救了被水城区再次败坏的“官方通报”的名声。但这件事提醒我们，某些地方政府睁着眼睛说瞎话已经成了习惯，我们不要轻易相信他们的“官方通报”。证据在手的时候，一定要坚持，不要轻易退缩。</p><p>2024年6月6日</p><div class="addtoany_share_save_container addtoany_content addtoany_content_bottom"><div class="a2a_kit a2a_kit_size_32 addtoany_list" data-a2a-url="https://chinadigitaltimes.net/chinese/708716.html" data-a2a-title="衣者褚｜事实证明，政府通报又撒了谎"><a class="a2a_button_facebook" href="https://www.addtoany.com/add_to/facebook?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="Facebook" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_twitter" href="https://www.addtoany.com/add_to/twitter?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="Twitter" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_telegram" href="https://www.addtoany.com/add_to/telegram?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="Telegram" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_reddit" href="https://www.addtoany.com/add_to/reddit?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="Reddit" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_whatsapp" href="https://www.addtoany.com/add_to/whatsapp?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="WhatsApp" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_email" href="https://www.addtoany.com/add_to/email?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="Email" rel="nofollow noopener" target="_blank"></a><a class="a2a_button_copy_link" href="https://www.addtoany.com/add_to/copy_link?linkurl=https%3A%2F%2Fchinadigitaltimes.net%2Fchinese%2F708716.html&amp;linkname=%E8%A1%A3%E8%80%85%E8%A4%9A%EF%BD%9C%E4%BA%8B%E5%AE%9E%E8%AF%81%E6%98%8E%EF%BC%8C%E6%94%BF%E5%BA%9C%E9%80%9A%E6%8A%A5%E5%8F%88%E6%92%92%E4%BA%86%E8%B0%8E" title="Copy Link" rel="nofollow noopener" target="_blank"></a><a class="a2a_dd addtoany_share_save addtoany_share" href="https://www.addtoany.com/share"></a></div></div>
