--- a/lists/中国数字时代.md
+++ b/lists/中国数字时代.md
@@ -5,7 +5,7 @@
 
 6-7 [【CDT报告汇】为什么中国当局不采取更多措施提振经济 ？“不知道”、“没办法”、“无所谓”和“我说的对”（外二篇）](/articles/cdt/339857.md)
 
-6-7 [衣者褚｜事实证明，政府通报又撒了谎](/articles/cdt/339859.md)
+6-7 [【404文库】衣者褚｜事实证明，政府通报又撒了谎](/articles/cdt/339859.md)
 
 6-7 [建设性意见｜反腐救不了中国足球](/articles/cdt/339861.md)
 
