--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-8 [美驻华大使：美中关系恢复“某种正常状态” 两国合作不复以往，“和中国领导人的变化有关”](/articles/voa/1015023.md)
+
+6-8 [美国5月份增加了27.2万个就业岗位，表明经济持续健康](/articles/voa/1015024.md)
+
 6-8 [雷蒙多：印太经济框架愿景已成为现实 专家：抗衡中国经济影响力的能力有限](/articles/voa/1015025.md)
 
 6-8 [美国批准向乌克兰提供2.25亿美元军援](/articles/voa/1015026.md)
@@ -596,8 +600,4 @@
 5-28 [世卫大会开幕：全球卫生面临气候混乱、冲突和新冠病毒等日益严峻的挑战](/articles/voa/1015321.md)
 
 5-28 [特朗普封口费案审判将于周二进行结案陈述](/articles/voa/1015322.md)
-
-5-28 [波兰推出加强东部边界防御计划的细节](/articles/voa/1015323.md)
-
-5-28 [国际原子能机构报告:伊朗浓缩铀库存增加](/articles/voa/1015324.md)
 
