--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,10 @@
 美国之音
 ------
 
+6-8 [布林肯星期日再访中东以期重启停火谈判](/articles/voa/1015019.md)
+
+6-8 [丹麦首相在哥本哈根被一男子袭击](/articles/voa/1015020.md)
+
 6-8 [普京或很快访平壤，美国警告朝鲜不要为俄提供宣扬侵乌战争的平台](/articles/voa/1015021.md)
 
 6-8 [中国通过格鲁吉亚进军黑海：你需要关注的几件事](/articles/voa/1015022.md)
@@ -596,8 +600,4 @@
 5-28 [缅甸罗兴亚难民危机加剧，中国调解人道危机还是维护经济利益？](/articles/voa/1015317.md)
 
 5-28 [中国东部安徽省一座楼房坍塌造成四人死亡](/articles/voa/1015318.md)
-
-5-28 [泽连斯基呼吁盟友允许乌克兰在俄罗斯境内使用西方远程武器](/articles/voa/1015319.md)
-
-5-28 [内塔尼亚胡：以色列在拉法的致命空袭是个“悲惨错误”](/articles/voa/1015320.md)
 
