--- a/lists/美国之音.md
+++ b/lists/美国之音.md
@@ -1,6 +1,8 @@
 美国之音
 ------
 
+6-8 [拜登在二战战场遗址呼吁在支持乌克兰问题上保持团结](/articles/voa/1015018.md)
+
 6-8 [布林肯星期日再访中东以期重启停火谈判](/articles/voa/1015019.md)
 
 6-8 [丹麦首相在哥本哈根被一男子袭击](/articles/voa/1015020.md)
@@ -598,6 +600,4 @@
 5-28 [美日韩谴责朝鲜尝试发射间谍卫星 抨击其威胁区域稳定](/articles/voa/1015316.md)
 
 5-28 [缅甸罗兴亚难民危机加剧，中国调解人道危机还是维护经济利益？](/articles/voa/1015317.md)
-
-5-28 [中国东部安徽省一座楼房坍塌造成四人死亡](/articles/voa/1015318.md)
 
